啊幅度萨芬

--- a/sinzuowebs/company.html
+++ b/sinzuowebs/company.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>公司介绍 - 七牛云</title>
+    <title>公司介绍 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -133,16 +133,16 @@
 <div class="features feature-color">
   <div class="container">
     <div class="intro">
-      <h2 class="title">七牛是一家怎样的公司？</h2>
+      <h2 class="title">芯卓信息科技是一家怎样的公司？</h2>
     </div>
-    <p>七牛云是国内领先的以视觉智能和数据智能为核心的企业级云计算服务商，同时也是国内最有特色的智能视频云服务商，累计为 70 多万家企业提供服务，覆盖了国内80%网民。围绕富媒体场景推出了对象存储、融合 CDN 加速、容器云、大数据平台、深度学习平台等产品、并提供一站式智能视频云解决方案。为各行业及应用提供可持续发展的智能视频云生态，帮助企业快速上云，创造更广阔的商业价值。</p>
+    <p>芯卓信息科技是国内领先的以视觉智能和数据智能为核心的企业级云计算服务商，同时也是国内最有特色的智能视频云服务商，累计为 70 多万家企业提供服务，覆盖了国内80%网民。围绕富媒体场景推出了对象存储、融合 CDN 加速、容器云、大数据平台、深度学习平台等产品、并提供一站式智能视频云解决方案。为各行业及应用提供可持续发展的智能视频云生态，帮助企业快速上云，创造更广阔的商业价值。</p>
   </div>
 </div>
 
 <div class="features feature-color">
   <div class="container">
     <div class="intro">
-      <h2 class="title">七牛云文化——简单·可信赖</h2>
+      <h2 class="title">芯卓信息科技文化——简单·可信赖</h2>
     </div>
 
     <div class="row">
@@ -180,7 +180,7 @@
 <div class="features">
   <div class="container">
     <div class="intro">
-      <h2 class="title">七牛云点点滴滴</h2>
+      <h2 class="title">芯卓信息科技点点滴滴</h2>
     </div>
     <div class="timeline">
       <ul class="timeline-ul">
@@ -196,7 +196,7 @@
                     <span class="icon-point icon-point-left"></span>
                     <span class="icon-point icon-point-right icon-event"></span>
                     <time>2011 年 08 月</time>
-                    <p>七牛云成立</p>
+                    <p>芯卓信息科技成立</p>
                   </div>
                   <span class="icon-img chenli"></span>
                 </div>
@@ -233,7 +233,7 @@
                 <div class="li-content">
                   <div class="info-div">
                     <time>2012 年 12 月</time>
-                    <p>七牛云著作《Go 语言编程》被评为“2012 年度十大图书之一”</p>
+                    <p>芯卓信息科技著作《Go 语言编程》被评为“2012 年度十大图书之一”</p>
                     <span class="icon-point icon-point-right"></span>
                     <span class="icon-point icon-point-left icon-event"></span>
                   </div>
@@ -308,7 +308,7 @@
                     <span class="icon-point icon-point-left"></span>
                     <span class="icon-point icon-point-right icon-event"></span>
                     <time>2015 年 01 月</time>
-                    <p>七牛云对象存储服务通过可信云认证</p>
+                    <p>芯卓信息科技对象存储服务通过可信云认证</p>
                   </div>
                   <span class="icon-img kexinyun"></span>
                 </div>
@@ -375,7 +375,7 @@
                     <span class="icon-point icon-point-left"></span>
                     <span class="icon-point icon-point-right icon-event"></span>
                     <time>2017 年 01 月</time>
-                    <p>智能大数据平台上线，结合七牛云生态，为用户赋能应用大数据的核心能力</p>
+                    <p>智能大数据平台上线，结合芯卓信息科技生态，为用户赋能应用大数据的核心能力</p>
                   </div>
                   <span class="icon-img dashuju"></span>
                 </div>
@@ -406,7 +406,7 @@
                 <div class="li-content">
                   <div class="info-div">
                     <time>2017 年 09 月</time>
-                    <p>七牛云人工智能团队勇斩 ACMMM LSVC 竞赛亚军，视频识别能力获国际认可</p>
+                    <p>芯卓信息科技人工智能团队勇斩 ACMMM LSVC 竞赛亚军，视频识别能力获国际认可</p>
                     <span class="icon-point icon-point-right"></span>
                     <span class="icon-point icon-point-left icon-event"></span>
                   </div>
@@ -419,7 +419,7 @@
                     <span class="icon-point icon-point-left"></span>
                     <span class="icon-point icon-point-right icon-event"></span>
                     <time>2017 年 10 月</time>
-                    <p>七牛云获工信部颁发的 CDN 牌照及云服务牌照</p>
+                    <p>芯卓信息科技获工信部颁发的 CDN 牌照及云服务牌照</p>
                   </div>
                   <span class="icon-img cdnpaizhao"></span>
                 </div>
@@ -590,9 +590,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -606,7 +606,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -700,9 +700,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -719,7 +719,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
