--- a/sinzuowebs/en/case.html
+++ b/sinzuowebs/en/case.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>客户案例 - 七牛云</title>
+    <title>客户案例 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -131,7 +131,7 @@
     <div class="middle-container">
       <center class="title">
         <h2>与 700,000+ 企业和开发者</h2>
-        <h2>一起使用七牛</h2>
+        <h2>一起使用芯卓信息科技</h2>
       </center>
     </div>
   </div>
@@ -141,7 +141,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <p>目前七牛已服务 70 多万家企业和开发者，七牛提供的云服务，正在包围我们的生活。顺丰、网易、饿了么、美拍、知乎、陌陌、蘑菇街等，都在使用七牛的服务。</p>
+        <p>目前芯卓信息科技已服务 70 多万家企业和开发者，芯卓信息科技提供的云服务，正在包围我们的生活。顺丰、网易、饿了么、美拍、知乎、陌陌、蘑菇街等，都在使用芯卓信息科技的服务。</p>
         <a target="_blank" class="more" href="https://blog.qiniu.com/archives/category/3">更多内容 &gt;</a>      </div>
     </div>
 
@@ -193,7 +193,7 @@
 <div class="features feature-case">
   <div class="container">
     <div class="intro">
-      <h2 class="title">他们都在用七牛云</h2>
+      <h2 class="title">他们都在用芯卓信息科技</h2>
     </div>
 
     <div class="tabs">
@@ -503,27 +503,27 @@
       <div class="tab-content tab-content-evaluation-details">
         <section id="tab-evaluation-section-1" class="tab-pane fade in active">
           <h3>刘宏伟<span>Camera360 副总裁</span></h3>
-          <p class="team-text">七牛在图像存储方面做了很多贴心服务，不仅解决了大规模存储问题， 也解决了移动互联网对照片浏览和计算的特殊需求。合作过程中，我们也从七牛研发团队里吸取到了前沿的研发流程。</p>
+          <p class="team-text">芯卓信息科技在图像存储方面做了很多贴心服务，不仅解决了大规模存储问题， 也解决了移动互联网对照片浏览和计算的特殊需求。合作过程中，我们也从芯卓信息科技研发团队里吸取到了前沿的研发流程。</p>
         </section class="tab-pane fade">
         <section id="tab-evaluation-section-2" class="tab-pane fade">
           <h3>汪威<span>咸蛋家 CTO</span></h3>
-          <p class="team-text">七牛为咸蛋家提供了整套的解决方案，在手机直播竞争激烈的当下，七牛提供的稳定、高效、可信赖的底层服务，使咸蛋家开发人员能集中精力开展业务逻辑方面的工作，也给咸蛋家赢得了时间和更好的行业领先地位。</p>
+          <p class="team-text">芯卓信息科技为咸蛋家提供了整套的解决方案，在手机直播竞争激烈的当下，芯卓信息科技提供的稳定、高效、可信赖的底层服务，使咸蛋家开发人员能集中精力开展业务逻辑方面的工作，也给咸蛋家赢得了时间和更好的行业领先地位。</p>
         </section>
          <section id="tab-evaluation-section-3" class="tab-pane fade">
           <h3>田波<span>中兴家庭网络运营总监</span></h3>
-          <p class="team-text">中兴智能家居产品依托七牛云服务，向用户提供音视频云存储、检索、分享等衍生增值服务，七牛的专业团队为海量数据的安全性及稳定性提供了有力保障。</p>
+          <p class="team-text">中兴智能家居产品依托芯卓信息科技服务，向用户提供音视频云存储、检索、分享等衍生增值服务，芯卓信息科技的专业团队为海量数据的安全性及稳定性提供了有力保障。</p>
         </section>
         <section id="tab-evaluation-section-4" class="tab-pane fade">
           <h3>李兴波<span>海康威视萤石云平台技术总监</span></h3>
-          <p class="team-text">在和七牛合作的这几年中，深刻的感受到七牛的的确确是一家做“云服务”的公司。作为技术产品服务供应商，在技术和服务品质上有一贯的追求是七牛的核心竞争力，同时在七牛的各个方面都同时体现着另种竞争力——对服务的理解。这就是除技术和产品等硬性表现外，赢的合作伙伴信任更为重要的基础。</p>
+          <p class="team-text">在和芯卓信息科技合作的这几年中，深刻的感受到芯卓信息科技的的确确是一家做“云服务”的公司。作为技术产品服务供应商，在技术和服务品质上有一贯的追求是芯卓信息科技的核心竞争力，同时在芯卓信息科技的各个方面都同时体现着另种竞争力——对服务的理解。这就是除技术和产品等硬性表现外，赢的合作伙伴信任更为重要的基础。</p>
         </section>
          <section id="tab-evaluation-section-5" class="tab-pane fade">
           <h3>徐华<span>沪江网副总裁</span></h3>
-          <p class="team-text">七牛为沪江提供了稳定高可用的云端文件大规模存储服务，很好地帮助企业降低了运营成本，提高了响应速度。我们相信，伴随着互联网教育的快速发展，沪江和七牛会有更多深入的合作，让我们能更专注于在线教育用户的核心需求。</p>
+          <p class="team-text">芯卓信息科技为沪江提供了稳定高可用的云端文件大规模存储服务，很好地帮助企业降低了运营成本，提高了响应速度。我们相信，伴随着互联网教育的快速发展，沪江和芯卓信息科技会有更多深入的合作，让我们能更专注于在线教育用户的核心需求。</p>
         </section>
         <section id="tab-evaluation-section-6" class="tab-pane fade">
           <h3>阮永丽<span>美图秀秀 CTO</span></h3>
-          <p class="team-text">美图有幸见证七牛这一路策马扬鞭的茁壮成长，其可靠云服务亦令美图的发展如虎添翼。回顾走过的历程，七牛攀登的路途上，每个足印都记录着技术的飞跃，每个里程碑都带给我们新的体验。</p>
+          <p class="team-text">美图有幸见证芯卓信息科技这一路策马扬鞭的茁壮成长，其可靠云服务亦令美图的发展如虎添翼。回顾走过的历程，芯卓信息科技攀登的路途上，每个足印都记录着技术的飞跃，每个里程碑都带给我们新的体验。</p>
         </section>
       </div>
     </div>
@@ -676,9 +676,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -692,7 +692,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -786,9 +786,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -805,7 +805,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
