--- a/sinzuowebs/en/cooperations.html
+++ b/sinzuowebs/en/cooperations.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>市场合作 - 七牛云</title>
+    <title>市场合作 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -131,7 +131,7 @@
     <div class="row bottom-line">
       <div class="col-sm-6">
         <h2>工具、插件、SDK 合作</h2>
-        <p>七牛云欢迎广大开发者提交工具、插件、SDK，我们会及时跟进您的提交申请。通过审核的工具、插件、SDK 将会在七牛云开发者中心社区资源上线。并且，您可以免费享受一定额度的云服务一整年。</p>
+        <p>芯卓信息科技欢迎广大开发者提交工具、插件、SDK，我们会及时跟进您的提交申请。通过审核的工具、插件、SDK 将会在芯卓信息科技开发者中心社区资源上线。并且，您可以免费享受一定额度的云服务一整年。</p>
         <div class="feature-contact-box">
           <a class="email-box" href="mailto:marketing@qiniu.com">marketing@qiniu.com</a>          <a class="tel-box" href="tel:400-808-9176">400-808-9176</a>        </div>
       </div>
@@ -171,7 +171,7 @@
     <div class="row">
       <div class="col-sm-6">
         <h2>渠道合作</h2>
-        <p>欢迎加入七牛云合作伙伴发展计划，利用七牛云的技术能力，我们协助你一起聚焦客户的数据智能与管理，提供更有价值的解决方案和服务。</p>
+        <p>欢迎加入芯卓信息科技合作伙伴发展计划，利用芯卓信息科技的技术能力，我们协助你一起聚焦客户的数据智能与管理，提供更有价值的解决方案和服务。</p>
         <a class="btn btn-primary" href="partner.html">查看详情</a>      </div>
     </div>
   </div>
@@ -182,7 +182,7 @@
     <div class="row bottom-line">
       <div class="col-sm-6">
         <h2>合作伙伴&友情链接</h2>
-        <p>欢迎与七牛云交换友情链接，交换条件：PR >= 5</p>
+        <p>欢迎与芯卓信息科技交换友情链接，交换条件：PR >= 5</p>
         <div class="feature-contact-box">
           <a class="email-box" href="mailto:marketing@qiniu.com">marketing@qiniu.com</a>        </div>
       </div>
@@ -385,7 +385,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="channel-modal-label">七牛云渠道代理合作申请表</h4>
+            <h4 class="modal-title" id="channel-modal-label">芯卓信息科技渠道代理合作申请表</h4>
           </div>
           <div class="modal-body">
             <div id="channel-alert" class="alert alert-success submit-alert" style="display: none;"></div>
@@ -475,7 +475,7 @@
                 <button name="button" type="submit" class="btn btn-primary" id="channel-submit" disabled="disabled" data-disable-with="正在提交中...">提 交</button>
               </div>
 </form>          </div>
-          <div class="modal-footer alert alert-info" role="alert">感谢您对七牛产品的关注和信任，我们期待您成为七牛云的渠道代理合作伙伴。在表单填写过程中有任何问题欢迎联系 marketing@qiniu.com，邮件标题注明【渠道合作】，会有专人与您联系。</div>
+          <div class="modal-footer alert alert-info" role="alert">感谢您对芯卓信息科技产品的关注和信任，我们期待您成为芯卓信息科技的渠道代理合作伙伴。在表单填写过程中有任何问题欢迎联系 marketing@qiniu.com，邮件标题注明【渠道合作】，会有专人与您联系。</div>
         </div>
       </div>
     </div>
@@ -486,7 +486,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="developer-modal-label">七牛云开发合作申请表</h4>
+            <h4 class="modal-title" id="developer-modal-label">芯卓信息科技开发合作申请表</h4>
           </div>
           <div class="modal-body">
             <div id="developer-alert" class="alert alert-success submit-alert" style="display: none;"></div>
@@ -595,7 +595,7 @@
                 <button name="button" type="submit" class="btn btn-primary" id="developer-submit" disabled="disabled" data-disable-with="正在提交中...">提 交</button>
               </div>
 </form>          </div>
-          <div class="modal-footer alert alert-info" role="alert">感谢您对七牛产品的关注和信任，我们期待您向七牛社区提交您的插件、SDK 或工具。在表单填写过程中有任何问题欢迎联系 marketing@qiniu.com，邮件标题注明【开发合作】，会有专人与您联系。</div>
+          <div class="modal-footer alert alert-info" role="alert">感谢您对芯卓信息科技产品的关注和信任，我们期待您向芯卓信息科技社区提交您的插件、SDK 或工具。在表单填写过程中有任何问题欢迎联系 marketing@qiniu.com，邮件标题注明【开发合作】，会有专人与您联系。</div>
         </div>
       </div>
     </div>
@@ -748,9 +748,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -764,7 +764,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -858,9 +858,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -877,7 +877,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
