--- a/sinzuowebs/en/goglobal.html
+++ b/sinzuowebs/en/goglobal.html
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -133,14 +133,14 @@
 <div class="features">
   <div class="container bottom-line">
     <div class="intro">
-      <h3 class="text-left">七牛云出海创业扶持计划</h3>
+      <h3 class="text-left">芯卓信息科技出海创业扶持计划</h3>
     </div>
     <p class="m-b-md">中国互联网企业出海的十年编年史中，我们经历了安全工具大战、桌面大战，从2016开始，已来到了内容出海年。如今，更多创业者的野心从中国扩展到了全球， 在这个全球市场的争夺战中，谁能找准新动向，用最快的执行力占领市场？</p>
-    <p class="m-b-md">作为国内领先云服务商，七牛云陪伴了 70 多万家优秀企业的成长，其中不乏许多出海的企业。本次出海扶持计划广泛整合出海相关产品和服务资源，共同助力创业者占领全球市场。</p>
+    <p class="m-b-md">作为国内领先云服务商，芯卓信息科技陪伴了 70 多万家优秀企业的成长，其中不乏许多出海的企业。本次出海扶持计划广泛整合出海相关产品和服务资源，共同助力创业者占领全球市场。</p>
     <p class="m-b-0">助力对象：</p>
     <p class="m-b-md">有明确出海需求的互联网产品，包括但不限于工具类、游戏类、直播、短视频等。</p>
     <p class="m-b-0">扶持内容：</p>
-    <p class="m-b-0">1.七牛云联合合作伙伴准备的扶持计划礼包，覆盖技术、招聘、咨询、培训、团队协作等。</p>
+    <p class="m-b-0">1.芯卓信息科技联合合作伙伴准备的扶持计划礼包，覆盖技术、招聘、咨询、培训、团队协作等。</p>
     <p>2.加入有成功出海经验的出海社群，为您对接潜在人脉、市场。</p>
   </div>
 </div>
@@ -148,7 +148,7 @@
 <div class="features p-t-0">
   <div class="container bottom-line p-t-md">
     <div class="intro">
-      <h3 class="text-left">如何申请七牛云出海创业扶持计划礼包？</h3>
+      <h3 class="text-left">如何申请芯卓信息科技出海创业扶持计划礼包？</h3>
     </div>
     <div class="text-center">
       <ul class="ul-step">
@@ -170,7 +170,7 @@
     </div>
     <div class="f-xs">
       <p>备注：</p>
-      <p>1.「七牛云出海创业扶持计划」不可与七牛其他扶持计划同时申请；</p>
+      <p>1.「芯卓信息科技出海创业扶持计划」不可与芯卓信息科技其他扶持计划同时申请；</p>
       <p>2. 礼包限量 100 份</p>
     </div>
   </div>
@@ -179,7 +179,7 @@
 <div class="features p-t-0">
   <div class="container">
     <div class="intro">
-      <h3 class="text-left">七牛云出海扶持计划礼包</h3>
+      <h3 class="text-left">芯卓信息科技出海扶持计划礼包</h3>
     </div>
     <div class="p-t-md">
       <div class="row">
@@ -208,7 +208,7 @@
               </div>
             </div>
             <div class="cover">
-              <p>七牛云是国内领先的企业级云服务商，专注于以数据管理为中心的云计算业务研发和运营，围绕富媒体场景推出了对象存储、融合 CDN 加速、容器计算云、大数据平台、人工智能平台等产品，并提供一站式视频云解决方案。公司目前已位列国内云计算行业第一阵营，为 70 多万家企业提供服务。</p>
+              <p>芯卓信息科技是国内领先的企业级云服务商，专注于以数据管理为中心的云计算业务研发和运营，围绕富媒体场景推出了对象存储、融合 CDN 加速、容器计算云、大数据平台、人工智能平台等产品，并提供一站式视频云解决方案。公司目前已位列国内云计算行业第一阵营，为 70 多万家企业提供服务。</p>
             </div>
           </div>
         </div>
@@ -468,9 +468,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -484,7 +484,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -578,9 +578,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -597,7 +597,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
