--- a/sinzuowebs/en/niudays/hangzhou.html
+++ b/sinzuowebs/en/niudays/hangzhou.html
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="../products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -202,7 +202,7 @@
           <div class="guest">
             <img width="100" src="../../assets/niuday/avatar-xushiwei-48d96509f448d8dc9987056319d13b7e2c062d9234fe1ec1812aabacdc2c1e8f.png" alt="Avatar xushiwei" />
             <h5>许式伟</h5>
-            <h5>七牛云 CEO</h5>
+            <h5>芯卓信息科技 CEO</h5>
             <h5></h5>
           </div>
         </div>
@@ -210,7 +210,7 @@
           <div class="guest">
             <img width="100" src="../../assets/niuday/avatar-lvguihua-eab85129c04db7f3830f15ee5b529f47718f25ae7bfd1a4243bb08954358549a.png" alt="Avatar lvguihua" />
             <h5>吕桂华</h5>
-            <h5>七牛云总裁</h5>
+            <h5>芯卓信息科技总裁</h5>
             <h5></h5>
           </div>
         </div>
@@ -218,7 +218,7 @@
           <div class="guest">
             <img width="100" src="../../assets/niuday/avatar-pengyao-5bc71ef64555e6ee348a651e352f55eeadce962f450d3d285e0853e7e88a7fd9.png" alt="Avatar pengyao" />
             <h5>彭垚</h5>
-            <h5>七牛云人工智能实验室负责人</h5>
+            <h5>芯卓信息科技人工智能实验室负责人</h5>
             <h5></h5>
           </div>
         </div>
@@ -226,7 +226,7 @@
           <div class="guest">
             <img width="100" src="../../assets/niuday/avatar-daiwenjun-db88a226a9fcae63b9c6182a659e053bb92014504d68df55710f8672ec7fd877.png" alt="Avatar daiwenjun" />
             <h5>戴文军</h5>
-            <h5>七牛云高级技术总监</h5>
+            <h5>芯卓信息科技高级技术总监</h5>
             <h5></h5>
           </div>
         </div>
@@ -256,14 +256,14 @@
           <tr>
             <td>议题一</td>
             <td>对智能时代到来的思考与探索</td>
-            <td>许式伟 七牛云CEO</td>
+            <td>许式伟 芯卓信息科技CEO</td>
             <td>30 min</td>
           </tr>
 
           <tr>
             <td>议题二</td>
             <td>“视觉智能的革命”—打造视频云时代的AI创新服务体系</td>
-            <td>彭垚 七牛云人工智能实验室负责人</td>
+            <td>彭垚 芯卓信息科技人工智能实验室负责人</td>
             <td>30 min</td>
           </tr>
 
@@ -281,7 +281,7 @@
           <tr>
             <td>议题四</td>
             <td>智能视频云的下一个起点</td>
-            <td>戴文军 七牛云高级技术总监</td>
+            <td>戴文军 芯卓信息科技高级技术总监</td>
             <td>30 min</td>
           </tr>
 
@@ -303,7 +303,7 @@
               <div class="m-b-sm">姚建兵 华数互联网技术部技术总监</div>
               <div class="m-b-sm">陈立力 大华智能云服务技术负责人</div>
               <div class="m-b-sm">赵丽丽 美图云视觉技术部技术总监</div>
-              <div>彭垚（主持人） 七牛云人工智能实验室负责人</div>
+              <div>彭垚（主持人） 芯卓信息科技人工智能实验室负责人</div>
             </td>
             <td>30 min</td>
           </tr>
@@ -703,7 +703,7 @@
         </div>
         <div class="links grey-link">
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
