--- a/sinzuowebs/en/product_news.html
+++ b/sinzuowebs/en/product_news.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>七牛云</title>
+    <title>芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -145,7 +145,7 @@
       <div class="col-sm-10">
         <div class="sections-wrapper">
           <section id=product_news>
-              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8724"><h4>因涉黄关闭的网站已 10W+，还好这里准备了安全秘籍！</h4><time>2018-01-18</time><span class="category">发布在   产品动态</span><p class="news-content">欢迎体验全新空间上传鉴黄服务。</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8723"><h4>用户的等待只有 0.3 秒！如此苛刻该用什么样的播放器？</h4><time>2018-01-16</time><span class="category">发布在   产品动态</span><p class="news-content">七牛云全自研播放器支持HLS自适应播放、DRM版权保护、H.265 播放、软硬解自动切换、本地缓存、边下边播等特色功能，提供了极其丰富的接口，方便自定义开发，并已经过千万日活验证。</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8716"><h4>苹果都在提及的H.265，你花个5分钟了解一下不亏吧！</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">苹果在WWDC2017上，宣布支持H.265，你都了解啦？</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8715"><h4>黏住 2.5 亿短视频用户，布局内容就够了？</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">你需要的是快人一步！</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8714"><h4>使用 Pandora 平台玩转直播实时质量监控</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">简单、高效、开放的一站式大数据服务</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8713"><h4>10 分钟内快速构建能够承载海量数据的 nginx 日志分析与报警平台</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">不仅功能齐全，而且效果酷炫！</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8712"><h4>使用 Pandora 平台轻松玩转大数据</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">简单、高效、开放的一站式大数据服务</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8572"><h4>【独家】七牛为开发者倾情奉献，性能秒杀 RSA 的 ECC 证书免费申请</h4><time>2017-06-29</time><span class="category">发布在   产品动态</span><p class="news-content">一、背景 据记载，公元前 400 年，古希腊人发明了置换密码。1881 年世界上的第一个电话保密专利出现。在第二次世界大战期间，德国军方启用「恩尼格玛」密码机，密码学在战争中起着非常重要的作用。 随着信息化和数字化社会的发展，人们对信息安全和保密的重要性认识不断提高，于是在 1997 年，美国国家标准局公布实施了「美国数据加密标准（DES）」，民间力量开始全面介入密码学的研究和应用中，采用的加密算法有 DES、RSA、SHA 等。随着对加密强度需求的不断提高，近期又出现了 AES、ECC 等。  使用密码学可以达到以下目的：  保密性：防止用户的标识或数据被读取。  数据完整性：防止数据被更改。  身份验证：确保数据发自特定的一方。 … 继续阅读…</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8551"><h4>七牛云六周年感恩季 携手客户共同成长</h4><time>2017-06-19</time><span class="category">发布在   产品动态</span><p class="news-content">2017年是七牛云成立六周年。为了感谢陪伴七牛云一路走来的伙伴，七牛云针对新老用户准备了不同的礼物。据悉，七牛云本次促销不只是一次简单的活动，更是对多年来陪伴七牛一路走来客户的感恩回馈。 创办于2011年的七牛云，一直聚焦以数据为核心的云服务市场，为企业提供数据存储、CDN加速、富媒体处理、直播云等服务。  成立六年多来，在绝大多数人的印象中，七牛云这个名词是和技术与服务紧紧相连的。在云服务这个竞争激烈、变化巨大的领域中，七牛云已经成长为国内领先的企业级云服务商，其中为客户称道的无疑是前瞻的技术与用心的服务。 2016年，“千播大战”使得直播技术成为最为火热的话题，但其实早在2014年，七牛云就前瞻性的发布了自己的直播SDK。201 … 继续阅读…</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8554"><h4>「六月感恩季，七牛献豪礼」盛大开启！</h4><time>2017-06-19</time><span class="category">发布在   产品动态</span><p class="news-content">2011年，七牛云成立。 2017 年，七牛云成立六周年。 从开始到现在，七牛云一直秉承着「缩短从想法到产品的距离」的初衷，从创始人的技术梦想，成长为一家间接服务着中国超过 50% 网民的企业。七牛云将一直陪伴在用户身边，共同面对发展道路上的一切挑战。这一次，我们开启七牛云史上力度最大的促销活动，感谢陪伴七牛云一路走来的伙伴。 活动详情 参与方式 1. 登录七牛官网 qiniu.com 2. 进入 portal.qiniu.com 3. 点击财务统计，系统将自动识别你能享受的优惠额度</p></a></div>          </section>
+              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8724"><h4>因涉黄关闭的网站已 10W+，还好这里准备了安全秘籍！</h4><time>2018-01-18</time><span class="category">发布在   产品动态</span><p class="news-content">欢迎体验全新空间上传鉴黄服务。</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8723"><h4>用户的等待只有 0.3 秒！如此苛刻该用什么样的播放器？</h4><time>2018-01-16</time><span class="category">发布在   产品动态</span><p class="news-content">芯卓信息科技全自研播放器支持HLS自适应播放、DRM版权保护、H.265 播放、软硬解自动切换、本地缓存、边下边播等特色功能，提供了极其丰富的接口，方便自定义开发，并已经过千万日活验证。</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8716"><h4>苹果都在提及的H.265，你花个5分钟了解一下不亏吧！</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">苹果在WWDC2017上，宣布支持H.265，你都了解啦？</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8715"><h4>黏住 2.5 亿短视频用户，布局内容就够了？</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">你需要的是快人一步！</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8714"><h4>使用 Pandora 平台玩转直播实时质量监控</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">简单、高效、开放的一站式大数据服务</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8713"><h4>10 分钟内快速构建能够承载海量数据的 nginx 日志分析与报警平台</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">不仅功能齐全，而且效果酷炫！</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8712"><h4>使用 Pandora 平台轻松玩转大数据</h4><time>2017-11-27</time><span class="category">发布在   产品动态</span><p class="news-content">简单、高效、开放的一站式大数据服务</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8572"><h4>【独家】芯卓信息科技为开发者倾情奉献，性能秒杀 RSA 的 ECC 证书免费申请</h4><time>2017-06-29</time><span class="category">发布在   产品动态</span><p class="news-content">一、背景 据记载，公元前 400 年，古希腊人发明了置换密码。1881 年世界上的第一个电话保密专利出现。在第二次世界大战期间，德国军方启用「恩尼格玛」密码机，密码学在战争中起着非常重要的作用。 随着信息化和数字化社会的发展，人们对信息安全和保密的重要性认识不断提高，于是在 1997 年，美国国家标准局公布实施了「美国数据加密标准（DES）」，民间力量开始全面介入密码学的研究和应用中，采用的加密算法有 DES、RSA、SHA 等。随着对加密强度需求的不断提高，近期又出现了 AES、ECC 等。  使用密码学可以达到以下目的：  保密性：防止用户的标识或数据被读取。  数据完整性：防止数据被更改。  身份验证：确保数据发自特定的一方。 … 继续阅读…</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8551"><h4>芯卓信息科技六周年感恩季 携手客户共同成长</h4><time>2017-06-19</time><span class="category">发布在   产品动态</span><p class="news-content">2017年是芯卓信息科技成立六周年。为了感谢陪伴芯卓信息科技一路走来的伙伴，芯卓信息科技针对新老用户准备了不同的礼物。据悉，芯卓信息科技本次促销不只是一次简单的活动，更是对多年来陪伴芯卓信息科技一路走来客户的感恩回馈。 创办于2011年的芯卓信息科技，一直聚焦以数据为核心的云服务市场，为企业提供数据存储、CDN加速、富媒体处理、直播云等服务。  成立六年多来，在绝大多数人的印象中，芯卓信息科技这个名词是和技术与服务紧紧相连的。在云服务这个竞争激烈、变化巨大的领域中，芯卓信息科技已经成长为国内领先的企业级云服务商，其中为客户称道的无疑是前瞻的技术与用心的服务。 2016年，“千播大战”使得直播技术成为最为火热的话题，但其实早在2014年，芯卓信息科技就前瞻性的发布了自己的直播SDK。201 … 继续阅读…</p></a></div>              <div class="news-modal clear-pt"><a target="_blank" href="https://blog.qiniu.com/archives/8554"><h4>「六月感恩季，芯卓信息科技献豪礼」盛大开启！</h4><time>2017-06-19</time><span class="category">发布在   产品动态</span><p class="news-content">2011年，芯卓信息科技成立。 2017 年，芯卓信息科技成立六周年。 从开始到现在，芯卓信息科技一直秉承着「缩短从想法到产品的距离」的初衷，从创始人的技术梦想，成长为一家间接服务着中国超过 50% 网民的企业。芯卓信息科技将一直陪伴在用户身边，共同面对发展道路上的一切挑战。这一次，我们开启芯卓信息科技史上力度最大的促销活动，感谢陪伴芯卓信息科技一路走来的伙伴。 活动详情 参与方式 1. 登录芯卓信息科技官网 qiniu.com 2. 进入 portal.qiniu.com 3. 点击财务统计，系统将自动识别你能享受的优惠额度</p></a></div>          </section>
         </div>
       </div>
     </div>
@@ -299,9 +299,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -315,7 +315,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -409,9 +409,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -428,7 +428,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
