--- a/sinzuowebs/en/ssl.html
+++ b/sinzuowebs/en/ssl.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>七牛云</title>
+    <title>芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -132,7 +132,7 @@
       <div class="row">
         <div class="col-xs-8">
           <h2>SSL 证书服务</h2>
-          <p>七牛云 SSL证书服务提供证书申请、管理等一站式服务，与顶级的数字证书授权（CA）机构和代理商合作，为您的网站、应用、服务保驾护航。</p>
+          <p>芯卓信息科技 SSL证书服务提供证书申请、管理等一站式服务，与顶级的数字证书授权（CA）机构和代理商合作，为您的网站、应用、服务保驾护航。</p>
           <div class="actions d-none">
             <a target="_blank" class="btn btn-lg btn-default m-r m-b-xs" href="https://portal.qiniu.com/signup/choice">立即使用</a>            <a target="_blank" class="btn btn-lg btn-hollow m-b-xs" href="https://developer.qiniu.com/ssl/manual/3662/ssl-price-overview">价格</a>            <h5><a target="_blank" class="out_link" href="https://portal.qiniu.com/signup/choice">域名型 DV SSL 证书免费申请 &gt;&gt;</a></h5>
           </div>
@@ -219,7 +219,7 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading">顶级品牌合作</h4>
-            <p>七牛云携手 TrustAsia 与国际顶级数字证书提供商 Symantec、GeoTrust 合作。</p>
+            <p>芯卓信息科技携手 TrustAsia 与国际顶级数字证书提供商 Symantec、GeoTrust 合作。</p>
           </div>
         </div>
       </div>
@@ -275,7 +275,7 @@
           <img class="media-object" alt="证书申购" width="80" src="../assets/ssl/icon-zhengshushengou-d59359f6ff389206cd0db562676b29c2908ec9a37c9c2b04e3166bd037a4f80d.png" />
           <div class="caption">
             <h4>证书申购</h4>
-            <p>七牛云提供了 Symantec、GeoTrust、TrustAsia 三大品牌 DV/OV/EV 十余种证书的申购服务，其中 TrustAsia DV 单域名证书可免费申请。</p>
+            <p>芯卓信息科技提供了 Symantec、GeoTrust、TrustAsia 三大品牌 DV/OV/EV 十余种证书的申购服务，其中 TrustAsia DV 单域名证书可免费申请。</p>
           </div>
         </div>
       </div>
@@ -295,7 +295,7 @@
           <img class="media-object" alt="集中管理" width="80" src="../assets/ssl/icon-jizhongguanli-8d7b5493b65604048108d529345acdb5f374274ff5bc39452bdc2ad30f3ce55c.png" />
           <div class="caption">
             <h4>集中管理</h4>
-            <p>支持申购的证书和用户上传的证书在七牛云平台上集中统一管理。</p>
+            <p>支持申购的证书和用户上传的证书在芯卓信息科技平台上集中统一管理。</p>
           </div>
         </div>
       </div>
@@ -587,9 +587,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -603,7 +603,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -697,9 +697,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -716,7 +716,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
