--- a/sinzuowebs/index.html
+++ b/sinzuowebs/index.html
@@ -8,12 +8,12 @@
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="rwsQUAEB/vQT4iLQYMU2I7GvgEwo5NGnm5OO7B9J6h98m4W1YP4243cH1A3AtXg7l1ku95ADgM53sRHTmwhWCA==" />
     <meta charset="utf-8">
-    <meta name="keywords" content="七牛, 七牛云, 七牛云存储, 七牛直播云, 七牛CDN加速" />
-    <meta name="description" content="七牛云是国内领先的企业级云服务商，致力于打造以数据为核心的场景化 PaaS 服务。围绕富媒体场景，七牛提供对象存储，融合CDN加速，直播云，内容反垃圾等服务。">
+    <meta name="keywords" content="芯卓信息科技, 芯卓信息科技, 芯卓信息科技存储, 芯卓信息科技直播云, 芯卓信息科技CDN加速" />
+    <meta name="description" content="芯卓信息科技是国内领先的企业级云服务商，致力于打造以数据为核心的场景化 PaaS 服务。围绕富媒体场景，芯卓信息科技提供对象存储，融合CDN加速，直播云，内容反垃圾等服务。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>七牛云-国内领先的企业级云服务商</title>
+    <title>芯卓信息科技-国内领先的企业级云服务商</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -147,7 +147,7 @@
             <div class="col-sm-7">
               <div class="banner-desc">
                 <h2>东南亚存储区域上线</h2>
-                <p>七牛云致力于赋能客户全球化布局</p>
+                <p>芯卓信息科技致力于赋能客户全球化布局</p>
                 <p>持续挖掘洞察海量数据的无限价值</p>
               </div>
               <a target="_blank" class="btn btn-lg btn-hollow btn-banner" href="https://developer.qiniu.com/kodo/manual/4263/operational-guidelines-for-the-new-bucket">查看详情</a>            </div>
@@ -242,7 +242,7 @@
           <div class="row">
             <div class="col-sm-7">
               <div class="banner-desc">
-                <h2>七牛云播放器重磅上线</h2>
+                <h2>芯卓信息科技播放器重磅上线</h2>
                 <p>秒开 200 ms，包体最小至 400 KB，千万日活验证</p>
               </div>
               <a class="btn btn-lg btn-hollow btn-banner" href="products/player.html">免费使用</a>            </div>
@@ -282,7 +282,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">海量存储</h4>
-              <p class="">所有数据都有有效期，面对不断膨胀的数据领域，数据如何管理？七牛云完全自主知识产权的对象存储，已经过最严酷的考验，为 EB 规模的数据存储做好充分准备。</p>
+              <p class="">所有数据都有有效期，面对不断膨胀的数据领域，数据如何管理？芯卓信息科技完全自主知识产权的对象存储，已经过最严酷的考验，为 EB 规模的数据存储做好充分准备。</p>
               <p>
                   <a class="icon icon-storage" href="products/kodo.html">对象存储</a>                  <a class="icon icon-databass" href="products/pandora.html">时序数据库</a>              </p>
             </div>
@@ -295,7 +295,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">数据洞察</h4>
-              <p class="">让数据从负担变成资产的关键步骤是数据的价值挖掘。七牛云提供的大数据产品集和机器学习产品集可以帮助您以最佳的方式理解自己的资产。</p>
+              <p class="">让数据从负担变成资产的关键步骤是数据的价值挖掘。芯卓信息科技提供的大数据产品集和机器学习产品集可以帮助您以最佳的方式理解自己的资产。</p>
               <p>
                   <a class="icon icon-machine-learning" href="products/atlab.html">深度学习平台</a>                  <a class="icon icon-xspark" href="products/pandora.html">Spark 服务</a>                  <a class="icon icon-bigdata" href="products/pandora.html">大数据平台</a>              </p>
             </div>
@@ -308,7 +308,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">加速传输</h4>
-              <p class="">七牛云独家的融合 CDN 结合了主流 CDN 和自建 CDN 节点的优势，让您能够在性能和成本之间得到一个最佳的平衡。</p>
+              <p class="">芯卓信息科技独家的融合 CDN 结合了主流 CDN 和自建 CDN 节点的优势，让您能够在性能和成本之间得到一个最佳的平衡。</p>
               <p>
                   <a class="icon icon-dora" href="products/fusion.html">融合 CDN</a>              </p>
             </div>
@@ -321,7 +321,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">高性能计算</h4>
-              <p class="">为了能让数据流转，我们需要对数据进行高速处理。七牛云构建了基于容器的计算平台，并基于容器平台构建了功能丰富且开放性的智能媒体云平台。您只需考虑怎么处理数据，而无需考虑数据的规模和系统性能。</p>
+              <p class="">为了能让数据流转，我们需要对数据进行高速处理。芯卓信息科技构建了基于容器的计算平台，并基于容器平台构建了功能丰富且开放性的智能媒体云平台。您只需考虑怎么处理数据，而无需考虑数据的规模和系统性能。</p>
               <p>
                   <a class="icon icon-media" href="products/dora.html">智能多媒体 API</a>                  <a class="icon icon-container" href="products/kirk.html">容器云</a>              </p>
             </div>
@@ -336,7 +336,7 @@
   <div class="container">
     <div class="intro">
       <h2 class="title">一站式视频点播和直播解决方案</h2>
-      <p class="desc">集成存储与融合 CDN，汇聚七牛强大的数据处理能力，提供直播、录制、转码、发布、加速、播放等一站式视频直播、点播服务。</p>
+      <p class="desc">集成存储与融合 CDN，汇聚芯卓信息科技强大的数据处理能力，提供直播、录制、转码、发布、加速、播放等一站式视频直播、点播服务。</p>
       <p class="desc">
           <a class="icon icon-streaming" href="products/vance.html">点播云</a>          <a class="icon icon-video" href="products/pili.html">直播云</a>      </p>
     </div>
@@ -347,7 +347,7 @@
             <img class="media-object media-object-index" width="120" alt="流畅" src="assets/icon-fast%402x-3c12bbd3a0cc5ae6117096bf13ad59033a855204368a01d534d136ddff1516a2.png" />
             <div class="caption caption-index">
               <h4 class="caption-title">流畅</h4>
-              <p>视频方案的基础在于播放的流畅性。七牛云从推流端到播放端每一个环节都进行了极致的流畅性优化。</p>
+              <p>视频方案的基础在于播放的流畅性。芯卓信息科技从推流端到播放端每一个环节都进行了极致的流畅性优化。</p>
             </div>
           </div>
         </div>
@@ -454,7 +454,7 @@
                 <a target="_blank" href="https://blog.qiniu.com/archives/8718">                  <div class="hot-im-wrapper"><img class="" alt="图片加载中" src="https://odum9helk.qnssl.com/FjkrNUuQ8bTqaPAEsgGZBAYMi5qS" /></div>
                   <div class="infobox">
                     <time>2017-11-27 发布在 新闻动态</time>
-                    <p title="七牛云获工信部CDN牌照 融合CDN优势凸显 助力中国企业无缝出海">七牛云获工信部CDN牌照 融合CDN优势凸显 助力中国企业无缝出海</p>
+                    <p title="芯卓信息科技获工信部CDN牌照 融合CDN优势凸显 助力中国企业无缝出海">芯卓信息科技获工信部CDN牌照 融合CDN优势凸显 助力中国企业无缝出海</p>
                   </div>
 </a>              </div>
             </div>
@@ -467,7 +467,7 @@
 
 <div class="stripe stripe-blue p-xxl ">
   <h3 class="text-center">
-    注册七牛云账户，即刻享受多款产品免费额度套餐
+    注册芯卓信息科技账户，即刻享受多款产品免费额度套餐
   </h3>
   <div class="text-center"><a href="https://portal.qiniu.com/signup?type=1" class="btn btn-lg btn-hollow around-xl" target="_blank">马上免费注册</a></div>
 </div>
@@ -615,9 +615,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -631,7 +631,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -725,9 +725,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -744,7 +744,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
