--- a/sinzuowebs/pricesc284.html
+++ b/sinzuowebs/pricesc284.html
@@ -9,11 +9,11 @@
 <meta name="csrf-token" content="Y/UD75OaICtKB26RuR9FngdIGegXA2idOeTp3/XYqlawZZYK8mXoPC7imEwZbwuGIb63U6/kOfTVxnbgcZkWQQ==" />
     <meta charset="utf-8">
     <meta name="keywords" content="云存储价格，cdn价格，直播云价格，对象存储价格，cdn费用，cdn多少钱" />
-    <meta name="description" content="七牛云为您提供的不止优秀的产品，还有极具竞争力的产品定价。">
+    <meta name="description" content="芯卓信息科技为您提供的不止优秀的产品，还有极具竞争力的产品定价。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>价格详情 - 七牛云</title>
+    <title>价格详情 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -182,7 +182,7 @@
               </dl>
 
               <dl>
-                <dd>开通七牛云对象存储服务的标准用户，每月可享受一定量的标准存储免费存储空间、标准存储免费请求数目。</dd>
+                <dd>开通芯卓信息科技对象存储服务的标准用户，每月可享受一定量的标准存储免费存储空间、标准存储免费请求数目。</dd>
                 <dd>每月计费时，会先抵扣免费额度，超出部分再按照价格详情付费结算。</dd>
               </dl>
 
@@ -413,7 +413,7 @@
             </div>
             <dl class="dl-border">
               <dt class="icon-title icon-fusion">融合 CDN</dt>
-              <dd>七牛云CDN加速按国内流量和海外流量阶梯价格计费，当月分别超额累进（以自然月为一个累计周期）。开通七牛云融合CDN的用户可分别享有国内和海外0-10GB HTTP下载流量。</dd>
+              <dd>芯卓信息科技CDN加速按国内流量和海外流量阶梯价格计费，当月分别超额累进（以自然月为一个累计周期）。开通芯卓信息科技融合CDN的用户可分别享有国内和海外0-10GB HTTP下载流量。</dd>
             </dl>
           </div>
 
@@ -1055,9 +1055,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -1071,7 +1071,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -1165,9 +1165,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -1184,7 +1184,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
