--- a/sinzuowebs/products/dora.html
+++ b/sinzuowebs/products/dora.html
@@ -9,11 +9,11 @@
 <meta name="csrf-token" content="wdeJ1BKlVP5zWdEFPX7BQuqMQgmRQ635opulEii5aYgSRxwxc1qc6Re8J9idDo9azHrssimk/JBOuTotrPjVnw==" />
     <meta charset="utf-8">
     <meta name="keywords" content="人脸识别，图片处理，视频处理，智能云相册，音视频处理，图片处理服务，音视频处理服务，转码，物体识别，OCR,发票识别，场景识别，鉴黄，暴恐审核" />
-    <meta name="description" content="七牛智能多媒体API支持每日数百亿次的图片、音视频基础处理请求，更提供丰富的基于海量数据深度学习算法的计算机视觉服务，如人脸技术、场景物体识别、OCR文字识别和内容审核等在线API服务。">
+    <meta name="description" content="芯卓信息科技智能多媒体API支持每日数百亿次的图片、音视频基础处理请求，更提供丰富的基于海量数据深度学习算法的计算机视觉服务，如人脸技术、场景物体识别、OCR文字识别和内容审核等在线API服务。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>智能多媒体API  - 七牛云</title>
+    <title>智能多媒体API  - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -250,11 +250,11 @@
         <div class="col-sm-6 col-padding col-content-middle sm-right">
           <div class="col-sm-6">
             <h5>图片缩略</h5>
-            <p>支持对存储在七牛云或使用七牛 CDN 的图片生成高质量缩略图，从而最好地满足你的大小、形状和风格需要。</p>
+            <p>支持对存储在芯卓信息科技或使用芯卓信息科技 CDN 的图片生成高质量缩略图，从而最好地满足你的大小、形状和风格需要。</p>
           </div>
           <div class="col-sm-6">
             <h5>图片瘦身</h5>
-            <p>支持对存储在七牛云或使用七牛 CDN 的 PNG、JPG 图片瘦身，缩小图片体积，节省流量，提升产品体验。</p>
+            <p>支持对存储在芯卓信息科技或使用芯卓信息科技 CDN 的 PNG、JPG 图片瘦身，缩小图片体积，节省流量，提升产品体验。</p>
             <a target="_blank" class="d-none" href="https://developer.qiniu.com/dora/manual/3683/img-directions-for-use">查看更多功能 &gt;</a>          </div>
         </div>
         <div class="col-sm-6 col-clear">
@@ -269,7 +269,7 @@
           </div>
           <div class="col-sm-6">
             <h5>视频截图</h5>
-            <p>支持对存储在七牛云的视频文件截取视频帧画面并按指定大小缩放成图片。</p>
+            <p>支持对存储在芯卓信息科技的视频文件截取视频帧画面并按指定大小缩放成图片。</p>
             <a target="_blank" class="d-none" href="https://developer.qiniu.com/dora/manual/3683/img-directions-for-use">查看更多功能 &gt;</a>          </div>
         </div>
         <div class="col-sm-6 col-clear">
@@ -587,9 +587,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -603,7 +603,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -697,9 +697,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -716,7 +716,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
