--- a/sinzuowebs/products/fusion.html
+++ b/sinzuowebs/products/fusion.html
@@ -8,12 +8,12 @@
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="6Tq2lvcGKLHUQpB/YxT5VtMQY6w8U1vXHn7PPwYILho6qiNzlvngprCnZqLDZLdO9ebNF4S0Cr7yXFAAgkmSDQ==" />
     <meta charset="utf-8">
-    <meta name="keywords" content="高防CDN，动态CDN，静态CDN，CDN，CDN加速，CDN加速服务, 七牛CDN，CDN服务器，内容分发，云加速，融合CDN，图片CDN，视频CDN" />
-    <meta name="description" content="七牛CDN是在传统CDN基础上实现的对数据网络加速进一步优化的融合管理服务。融合优质节点，可监控，智能调度，为用户提供连续，稳定快速的内容分发服务。">
+    <meta name="keywords" content="高防CDN，动态CDN，静态CDN，CDN，CDN加速，CDN加速服务, 芯卓信息科技CDN，CDN服务器，内容分发，云加速，融合CDN，图片CDN，视频CDN" />
+    <meta name="description" content="芯卓信息科技CDN是在传统CDN基础上实现的对数据网络加速进一步优化的融合管理服务。融合优质节点，可监控，智能调度，为用户提供连续，稳定快速的内容分发服务。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>融合CDN，CDN加速服务 - 七牛云</title>
+    <title>融合CDN，CDN加速服务 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-xs-8">
           <h2>融合 CDN</h2>
-          <p>融合 CDN (FUSION) 是在传统 CDN 基础上实现的对数据网络加速进一步优化的融合管理服务。除了服务于音视频点播，文件、应用与 Web 加速，以及各类增值场景外，七牛融合 CDN 还通过全方位的 CDN 质量监控，以及智能易用的加速节点调度等功能，保障用户服务的连续性，提供稳定快速的网络访问质量。</p>
+          <p>融合 CDN (FUSION) 是在传统 CDN 基础上实现的对数据网络加速进一步优化的融合管理服务。除了服务于音视频点播，文件、应用与 Web 加速，以及各类增值场景外，芯卓信息科技融合 CDN 还通过全方位的 CDN 质量监控，以及智能易用的加速节点调度等功能，保障用户服务的连续性，提供稳定快速的网络访问质量。</p>
           <div class="actions ">
             <a target="_blank" class="btn btn-lg btn-default m-r m-b-xs" href="https://portal.qiniu.com/signup/choice">立即使用</a>            <a class="btn btn-lg btn-hollow m-b-xs" href="../prices7b85.html?source=fusion">产品价格</a>            <h5><a target="_blank" class="out_link" href="../ssl.html">域名型 DV SSL 证书免费申请 &gt;&gt;</a></h5>
           </div>
@@ -191,7 +191,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">无盲区</h4>
-              <p>成熟的多 CDN 融合管控方案，精选主流 CDN 厂商优质节点，与七牛自有高质量节点相结合，全面覆盖各地区各运营商网络，真正做到无盲区。</p>
+              <p>成熟的多 CDN 融合管控方案，精选主流 CDN 厂商优质节点，与芯卓信息科技自有高质量节点相结合，全面覆盖各地区各运营商网络，真正做到无盲区。</p>
             </div>
           </div>
         </div>
@@ -202,7 +202,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">智能调度</h4>
-              <p>基于七牛自有 IP 库，结合全网宕机与性能监控，研发的智能融合调度系统，支持 DNS、HttpDNS、IP302 调度方式，有效防止访问劫持，实现 100% 实时调度精准可控。</p>
+              <p>基于芯卓信息科技自有 IP 库，结合全网宕机与性能监控，研发的智能融合调度系统，支持 DNS、HttpDNS、IP302 调度方式，有效防止访问劫持，实现 100% 实时调度精准可控。</p>
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">立体品控</h4>
-              <p>基于权威 APM 厂商「覆盖性能监控」，七牛自研全网「实时可用性监控」，SDK 日志上报「实时访问性能监控」，打造七牛融合 CDN 立体品控体系。</p>
+              <p>基于权威 APM 厂商「覆盖性能监控」，芯卓信息科技自研全网「实时可用性监控」，SDK 日志上报「实时访问性能监控」，打造芯卓信息科技融合 CDN 立体品控体系。</p>
             </div>
           </div>
         </div>
@@ -277,7 +277,7 @@
               </div>
 
               <div class="media-body">
-                <p>网页静态资源优化加速分发，例如：html、css、js、img、短视频等；全站 HTTPS 保证网站访问安全； TCP 压缩优化使网页大图，样式等完成秒级加载，缩短网页响应时间提高用户体验。配合七牛云-图片处理服务一起使用，还可以针对图片进行缩略、打水印，转格式等数据处理服务。</p>
+                <p>网页静态资源优化加速分发，例如：html、css、js、img、短视频等；全站 HTTPS 保证网站访问安全； TCP 压缩优化使网页大图，样式等完成秒级加载，缩短网页响应时间提高用户体验。配合芯卓信息科技-图片处理服务一起使用，还可以针对图片进行缩略、打水印，转格式等数据处理服务。</p>
               </div>
             </div>
           </section>
@@ -288,7 +288,7 @@
               </div>
 
               <div class="media-body">
-                <p>大文件下载优化加速分发，例如：apk、mp3、exe、zip 等；七牛融合 CDN 在全球数千个节点，让用户在下载过程中获得更快的下载速度，并利用分段缓存技术提高了大文件下载传输的稳定性。配合七牛云-存储服务一起使用，可有效降低回源和存储成本。</p>
+                <p>大文件下载优化加速分发，例如：apk、mp3、exe、zip 等；芯卓信息科技融合 CDN 在全球数千个节点，让用户在下载过程中获得更快的下载速度，并利用分段缓存技术提高了大文件下载传输的稳定性。配合芯卓信息科技-存储服务一起使用，可有效降低回源和存储成本。</p>
               </div>
             </div>
           </section>
@@ -299,7 +299,7 @@
               </div>
 
               <div class="media-body">
-                <p>音视频点播优化加速服务，例如：mp4、flv、rmvb、wmv、hls 等；七牛融合 CDN 利用 BGP 网络中间源技术降低回源带宽压力节省了用户回源成本、分段预取技术使用户在浏览音视频时更加的流畅，高级防盗链技术有效防止用户文件被盗用。配合七牛云-数据处理服务，还可以进行音视频转码、转格式、压缩等数据处理服务。</p>
+                <p>音视频点播优化加速服务，例如：mp4、flv、rmvb、wmv、hls 等；芯卓信息科技融合 CDN 利用 BGP 网络中间源技术降低回源带宽压力节省了用户回源成本、分段预取技术使用户在浏览音视频时更加的流畅，高级防盗链技术有效防止用户文件被盗用。配合芯卓信息科技-数据处理服务，还可以进行音视频转码、转格式、压缩等数据处理服务。</p>
               </div>
             </div>
           </section>
@@ -345,7 +345,7 @@
             <ul class="links-list">
               <li><a target="_blank" title="快速入门" href="https://developer.qiniu.com/fusion/manual/1228/fusion-quick-start">快速入门</a></li>
               <li><a target="_blank" title="DV 证书验证指南" href="https://developer.qiniu.com/ssl/manual/3667/ssl-certificate-of-free-dns-validation-guide">DV 证书验证指南</a></li>
-              <li><a target="_blank" title="七牛全球下载加速的海外一览表" href="https://developer.qiniu.com/fusion/manual/1360/seven-cattle-download-speed-of-the-world-s-overseas-schedule">七牛全球下载加速的海外一览表</a></li>
+              <li><a target="_blank" title="芯卓信息科技全球下载加速的海外一览表" href="https://developer.qiniu.com/fusion/manual/1360/seven-cattle-download-speed-of-the-world-s-overseas-schedule">芯卓信息科技全球下载加速的海外一览表</a></li>
               <li><a target="_blank" title="绑定加速域名和域名解析流程" href="https://developer.qiniu.com/fusion/manual/1367/custom-domain-name-binding-process">绑定加速域名和域名解析流程</a></li>
             </ul>
           </div>
@@ -375,7 +375,7 @@
           <div class="col-sm-3 col-xs-6">
             <h4>产品动态</h4>
             <ul class="links-list">
-              <li><a target="_blank" title="斩获 GFIC 2016 “产品创新奖”，七牛云融合 CDN 突围而出" href="http://blog.qiniu.com/archives/7541">斩获 GFIC 2016 “产品创新奖”，七牛云融合 CDN 突围而出</a></li>
+              <li><a target="_blank" title="斩获 GFIC 2016 “产品创新奖”，芯卓信息科技融合 CDN 突围而出" href="http://blog.qiniu.com/archives/7541">斩获 GFIC 2016 “产品创新奖”，芯卓信息科技融合 CDN 突围而出</a></li>
             </ul>
           </div>
         </div>
@@ -528,9 +528,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -544,7 +544,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -638,9 +638,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -657,7 +657,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
