--- a/sinzuowebs/products/kodo.html
+++ b/sinzuowebs/products/kodo.html
@@ -8,12 +8,12 @@
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="gCbKGWWhv91VuWYdBaEwEObm6+su7kYL6yW1UJ05wd1Ttl/8BF53yjFckMCl0X4IwBBFUJYJF2IHBypvGXh9yg==" />
     <meta charset="utf-8">
-    <meta name="keywords" content="云存储, 对象存储, 七牛云存储, 分布式存储, 图片存储, 视频存储, 存储解决方案，视频托管，图片托管，低频存储，镜像存储，私有部署，静态资源托管，备份归档，数据迁移，数据灾备，弹性扩容" />
-    <meta name="description" content="七牛云对象存储为七牛完全自主研发并拥有核心技术，经过大规模客户验证已占据行业绝对领先地位，可广泛应用于海量数据管理的场景。强安全、高可靠、易扩展、低成本，比传统存储节省 62% 的存储成本。">
+    <meta name="keywords" content="云存储, 对象存储, 芯卓信息科技存储, 分布式存储, 图片存储, 视频存储, 存储解决方案，视频托管，图片托管，低频存储，镜像存储，私有部署，静态资源托管，备份归档，数据迁移，数据灾备，弹性扩容" />
+    <meta name="description" content="芯卓信息科技对象存储为芯卓信息科技完全自主研发并拥有核心技术，经过大规模客户验证已占据行业绝对领先地位，可广泛应用于海量数据管理的场景。强安全、高可靠、易扩展、低成本，比传统存储节省 62% 的存储成本。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>对象存储_海量安全高可靠的云存储 - 七牛云</title>
+    <title>对象存储_海量安全高可靠的云存储 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-xs-10 col-sm-8">
           <h2>对象存储</h2>
-          <p>七牛云海量存储系统  (KODO)  为完全自主研发并拥有核心技术，经过多年的大规模客户验证已占据行业绝对领先地位，可广泛应用于海量数据管理的场景。</p>
+          <p>芯卓信息科技海量存储系统  (KODO)  为完全自主研发并拥有核心技术，经过多年的大规模客户验证已占据行业绝对领先地位，可广泛应用于海量数据管理的场景。</p>
           <div class="actions ">
             <a target="_blank" class="btn btn-lg btn-default m-r m-b-xs" href="https://portal.qiniu.com/signup/choice">立即使用</a>            <a class="btn btn-lg btn-hollow m-b-xs" href="../pricesc284.html?source=kodo">产品价格</a>            <h5 class="kodo-modal m-b-none">现已推出私有云存储解决方案，能够针对企业客户场景进行灵活地部署和运维，</h5>
             <h5 class="kodo-modal m-t-none">如有需要，请 <a class="out_link underline" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></h5>
@@ -190,7 +190,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">易扩展</h4>
-              <p>利用七牛云对象存储，您的存储空间无上限的同时也无需担心扩容问题。您能够实现存储需求的弹性伸缩，从而提高业务灵活性。</p>
+              <p>利用芯卓信息科技对象存储，您的存储空间无上限的同时也无需担心扩容问题。您能够实现存储需求的弹性伸缩，从而提高业务灵活性。</p>
             </div>
           </div>
         </div>
@@ -201,7 +201,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">低成本</h4>
-              <p>您无需前期投入。七牛云对象存储按需使用、按需付费的便捷性，能够有效避免存储及带宽资源的闲置浪费。</p>
+              <p>您无需前期投入。芯卓信息科技对象存储按需使用、按需付费的便捷性，能够有效避免存储及带宽资源的闲置浪费。</p>
             </div>
           </div>
         </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="media-body">
               <h4 class="media-heading">数据智能化</h4>
-              <p>与七牛云其他产品紧密协同，提供标准 HDFS 访问方式，为大数据和机器学习的海量高速读写场景进行了大量优化。</p>
+              <p>与芯卓信息科技其他产品紧密协同，提供标准 HDFS 访问方式，为大数据和机器学习的海量高速读写场景进行了大量优化。</p>
             </div>
           </div>
         </div>
@@ -278,7 +278,7 @@
             <img class="media-object" alt="上传／下载" width="60" src="../assets/icon-shangchuan-xiazai%402x-16fa8f20cd9ab3fc47704192724375782db855ab88e310acab0d749b7a0174e8.png" />
             <div class="caption">
               <h4>上传／下载</h4>
-              <p>针对不同的上传/下载场景，七牛云提供了丰富的API接口和工具供用户使用，同时支持服务端上传和客户端直传，并提供加速服务。<a class="more" href="https://developer.qiniu.com/kodo/manual/1234/upload-types">了解更多</a></p>
+              <p>针对不同的上传/下载场景，芯卓信息科技提供了丰富的API接口和工具供用户使用，同时支持服务端上传和客户端直传，并提供加速服务。<a class="more" href="https://developer.qiniu.com/kodo/manual/1234/upload-types">了解更多</a></p>
             </div>
           </div>
         </div>
@@ -307,7 +307,7 @@
             <div class="media">
               <div class="media-left"><img alt="私有云存储" class="media-object img-left" src="../assets/icon-siyouhuabushu%402x-7d3dcc413a251dff04d0e00534613e14c059999369b75f2c17640e64b359c85b.png" /></div>
               <div class="media-body">
-                <p>企业客户可以选择私有化部署七牛云对象存储系统。基于公有云存储的经验积累，私有云存储解决方案具备高可靠、强安全、易扩展等特性。同时还能提供成熟的系统管理和运维，让企业以更低廉的产品及维护成本，满足在容量、性能及稳定性上的需求。<a class="more" href="../solutions.html#QOS">了解详情</a></p>
+                <p>企业客户可以选择私有化部署芯卓信息科技对象存储系统。基于公有云存储的经验积累，私有云存储解决方案具备高可靠、强安全、易扩展等特性。同时还能提供成熟的系统管理和运维，让企业以更低廉的产品及维护成本，满足在容量、性能及稳定性上的需求。<a class="more" href="../solutions.html#QOS">了解详情</a></p>
               </div>
             </div>
           </section>
@@ -315,7 +315,7 @@
             <div class="media">
               <div class="media-left"><img alt="多媒体数据处理" class="media-object img-left" src="../assets/icon-shujuchuli2%402x-93eb1005873d9514f93e27b4f773c0db0c9b889710e8c2b283b0947ab0ba00ab.png" /></div>
               <div class="media-body">
-                <p>针对有海量用户生成内容的场景，七牛云对象存储服务的高并发能力使您灵活应对大流量的业务场景。您可以对存储在云端的图片、音视频等文件进行数据处理。<a class="more" href="../solutions.html#QOS"></a></p>
+                <p>针对有海量用户生成内容的场景，芯卓信息科技对象存储服务的高并发能力使您灵活应对大流量的业务场景。您可以对存储在云端的图片、音视频等文件进行数据处理。<a class="more" href="../solutions.html#QOS"></a></p>
               </div>
             </div>
           </section>
@@ -323,7 +323,7 @@
             <div class="media">
               <div class="media-left"><img alt="内容加速分发" class="media-object img-left" src="../assets/icon-neirongjiasufenfa%402x-b75af7384f8f7fa2f7fd4aac23a79c219b041ac144c78547bb06f909fbb166b8.png" /></div>
               <div class="media-body">
-                <p>面对视频、游戏等热点资源分发的业务场景，您可以使用七牛云对象存储作为源站，搭配七牛云融合 CDN 进行加速分发，方便您通过 CDN 节点就近访问资源，提升用户体验。<a class="more" href="../solutions.html#QOS"></a></p>
+                <p>面对视频、游戏等热点资源分发的业务场景，您可以使用芯卓信息科技对象存储作为源站，搭配芯卓信息科技融合 CDN 进行加速分发，方便您通过 CDN 节点就近访问资源，提升用户体验。<a class="more" href="../solutions.html#QOS"></a></p>
               </div>
             </div>
           </section>
@@ -331,7 +331,7 @@
             <div class="media">
               <div class="media-left"><img alt="海量数据高并发" class="media-object img-left" src="../assets/icon-hailiangshuju%402x-761d44f1a70263815e83f21ca24e5db9cf3b509b52be9e85f1e9668a8084795d.png" /></div>
               <div class="media-body">
-                <p>七牛云针对海量数据高并发的场景做了深度优化，实现了对象存储访问协议到 HDFS 协议的转换。相较于传统 Hadoop 方案，用户可获得更优的读取、分析性能，更强的稳定性和更好的扩展性。<a class="more" href="../solutions.html#QOS"></a></p>
+                <p>芯卓信息科技针对海量数据高并发的场景做了深度优化，实现了对象存储访问协议到 HDFS 协议的转换。相较于传统 Hadoop 方案，用户可获得更优的读取、分析性能，更强的稳定性和更好的扩展性。<a class="more" href="../solutions.html#QOS"></a></p>
               </div>
             </div>
           </section>
@@ -339,7 +339,7 @@
             <div class="media">
               <div class="media-left"><img alt="备份和归档" class="media-object img-left" src="../assets/icon-cunchuheguidang%402x-80cd6587a6cc5018ddea1cad8d5ad30f09a3283b9ad5b8e170b5be81cac58149.png" /></div>
               <div class="media-body">
-                <p>七牛云提供高可用和高可靠的存储解决方案来备份和归档用户的关键数据，用户可以设置不同的访问权限和级别，保障数据访问安全。相较于传统自建方案，用户无需采购高昂硬件，无需担心扩容、安全等问题，从而节省更多的存储、维护、人力成本。<a class="more" href="../solutions.html#QOS"></a></p>
+                <p>芯卓信息科技提供高可用和高可靠的存储解决方案来备份和归档用户的关键数据，用户可以设置不同的访问权限和级别，保障数据访问安全。相较于传统自建方案，用户无需采购高昂硬件，无需担心扩容、安全等问题，从而节省更多的存储、维护、人力成本。<a class="more" href="../solutions.html#QOS"></a></p>
               </div>
             </div>
           </section>
@@ -347,7 +347,7 @@
             <div class="media">
               <div class="media-left"><img alt="静态资源托管" class="media-object img-left" src="../assets/icon-tuoguanjingtaiziyuan%402x-868f9203eaa34cc194c8fda9440262922a1f3496409d376a810efdded64b8eba.png" /></div>
               <div class="media-body">
-                <p>七牛云无缝集合各类第三方扩展插件，如 WordPress、Discuz、Emlog 等，并支持一键将各类插件里的静态资源托管到七牛。<a class="more" href="../solutions.html#QOS"></a></p>
+                <p>芯卓信息科技无缝集合各类第三方扩展插件，如 WordPress、Discuz、Emlog 等，并支持一键将各类插件里的静态资源托管到芯卓信息科技。<a class="more" href="../solutions.html#QOS"></a></p>
               </div>
             </div>
           </section>
@@ -403,8 +403,8 @@
           <div class="col-sm-3 col-xs-6">
             <h4>常见问题</h4>
             <ul class="links-list">
-              <li><a title="如何将线上的数据热迁移到七牛云" target="_blank" href="https://developer.qiniu.com/kodo/kb/how-to-heat-transfer-to-the-seven-niuyun-online-data">如何将线上的数据热迁移到七牛云</a></li>
-              <li><a target="_blank" href="https://developer.qiniu.com/kodo/kb/1336/upload-download-instructions">七牛云上传下载操作指南</a></li>
+              <li><a title="如何将线上的数据热迁移到芯卓信息科技" target="_blank" href="https://developer.qiniu.com/kodo/kb/how-to-heat-transfer-to-the-seven-niuyun-online-data">如何将线上的数据热迁移到芯卓信息科技</a></li>
+              <li><a target="_blank" href="https://developer.qiniu.com/kodo/kb/1336/upload-download-instructions">芯卓信息科技上传下载操作指南</a></li>
               <li><a target="_blank" title="公开空间和私有空间的区别是什么" href="https://developer.qiniu.com/kodo/kb/1368/the-difference-between-the-original-protection-and-private-space">公开空间和私有空间的区别是什么</a></li>
               <li><a target="_blank" href="https://developer.qiniu.com/kodo/kb/3858/video-of-how-to-use-qrs-tools">如何使用命令行工具</a></li>
             </ul>
@@ -573,9 +573,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -589,7 +589,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -683,9 +683,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -702,7 +702,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
