--- a/sinzuowebs/solutions.html
+++ b/sinzuowebs/solutions.html
@@ -9,11 +9,11 @@
 <meta name="csrf-token" content="sSoHTi5sMVIql3YNOkwsq0JnCTpR6sm5YZeMNcsy29NiupKrT5P5RU5ygNCaPGKzZJGngekNmNCNtRMKT3NnxA==" />
     <meta charset="utf-8">
     <meta name="keywords" content="对象存储私有化部署方案，非结构化数据管理解决方案，智能云相册解决方案，智能硬件与物联网解决方案，广电传媒解决方案，安防终端解决方案，互联网与移动互联网解决方案，应用质量监控解决方案" />
-    <meta name="description" content="七牛云解决方案平台，基于八大核心产品对象存储、融合CDN、容器云、大数据平台、深度学习平台、智能多媒体API、直播云、点播云，以及自身多年的云服务领域的技术积累和服务运营经验，七牛云精心打造的简单、可信的解决方案平台，帮助您快速实现业务需求并创造更多商业价值。">
+    <meta name="description" content="芯卓信息科技解决方案平台，基于八大核心产品对象存储、融合CDN、容器云、大数据平台、深度学习平台、智能多媒体API、直播云、点播云，以及自身多年的云服务领域的技术积累和服务运营经验，芯卓信息科技精心打造的简单、可信的解决方案平台，帮助您快速实现业务需求并创造更多商业价值。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>解决方案 - 七牛云</title>
+    <title>解决方案 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -134,8 +134,8 @@
     <div class="middle-container">
       <div class="row">
         <div class="col-xs-8">
-          <h2>七牛云解决方案平台</h2>
-          <p>基于八大核心产品对象存储、融合 CDN、容器云、大数据平台、深度学习平台、智能多媒体 API、直播云、点播云，以及自身多年的云服务领域的技术积累和服务运营经验，七牛云精心打造了简单、可信的解决方案平台，以帮助您快速实现业务需求并创造更多商业价值。</p>
+          <h2>芯卓信息科技解决方案平台</h2>
+          <p>基于八大核心产品对象存储、融合 CDN、容器云、大数据平台、深度学习平台、智能多媒体 API、直播云、点播云，以及自身多年的云服务领域的技术积累和服务运营经验，芯卓信息科技精心打造了简单、可信的解决方案平台，以帮助您快速实现业务需求并创造更多商业价值。</p>
         </div>
         <div class="col-xs-4 hidden-xs">
           <div class="right-mask-banner">
@@ -152,7 +152,7 @@
     <div class="row row-solution" id="privatization">
       <div class="col-sm-8 col-solution right-line">
         <h2 class="icon140 icon-privatization">私有云存储解决方案</h2>
-        <p class="content">私有云存储解决方案是基于七牛公有云对象存储服务的架构和运营经验设计而成的，能够为企业客户搭建独立的数百 PB 级别的高可靠、强安全、低成本、可扩展的存储系统，满足多样化的非结构化数据存储需求。同时还能提供成熟的系统管理和运维，让企业以更低廉的产品及维护成本，满足在容量、性能及稳定性上的需求。<a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
+        <p class="content">私有云存储解决方案是基于芯卓信息科技公有云对象存储服务的架构和运营经验设计而成的，能够为企业客户搭建独立的数百 PB 级别的高可靠、强安全、低成本、可扩展的存储系统，满足多样化的非结构化数据存储需求。同时还能提供成熟的系统管理和运维，让企业以更低廉的产品及维护成本，满足在容量、性能及稳定性上的需求。<a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class=""><h5 class="icon50 icon-kodo">对象存储</h5></div>
       </div>
       <div class="col-sm-4 col-scene">
@@ -193,7 +193,7 @@
     <div class="row row-solution" id="data">
       <div class="col-sm-8 col-solution left-line">
         <h2 class="icon140 icon-data">非结构化数据管理解决方案</h2>
-        <p class="content">七牛云非结构化数据管理平台基于七牛对象存储系统构建，能轻松实现百亿级别非结构化数据，及其结构化业务属性数据的存储；平台具高可用、高并发读写、线性扩展等特性，同时能够提供基于结构化业务属性数据的文档检索等服务，拥有 PaaS 级别的权限管理和安全机制，还能与七牛数据处理智能多媒体 API 平台无缝对接，实现影像处理，智能识别与分析等服务。
+        <p class="content">芯卓信息科技非结构化数据管理平台基于芯卓信息科技对象存储系统构建，能轻松实现百亿级别非结构化数据，及其结构化业务属性数据的存储；平台具高可用、高并发读写、线性扩展等特性，同时能够提供基于结构化业务属性数据的文档检索等服务，拥有 PaaS 级别的权限管理和安全机制，还能与芯卓信息科技数据处理智能多媒体 API 平台无缝对接，实现影像处理，智能识别与分析等服务。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -227,7 +227,7 @@
     <div class="row row-solution" id="plsv">
       <div class="col-sm-8 col-solution right-line">
         <h2 class="icon140 icon-plsv">短视频解决方案</h2>
-        <p class="content">七牛云短视频解决方案是基于快速上传、转码、鉴黄、存储、分发等强大云端能力，集成拍摄、美颜、特效、滤镜、编辑、合成、本地压缩、上传、播放等客户端组件的一站式短视频解决方案。具有功能完善、性能优越、包体轻盈、接口灵活、生态丰富等特点。支持高度定制及二次开发，以满足企业各种业务场景的开发需求。
+        <p class="content">芯卓信息科技短视频解决方案是基于快速上传、转码、鉴黄、存储、分发等强大云端能力，集成拍摄、美颜、特效、滤镜、编辑、合成、本地压缩、上传、播放等客户端组件的一站式短视频解决方案。具有功能完善、性能优越、包体轻盈、接口灵活、生态丰富等特点。支持高度定制及二次开发，以满足企业各种业务场景的开发需求。
         <a class="more" href="products/plsv.html">查看详情</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -277,7 +277,7 @@
     <div class="row row-solution" id="album">
       <div class="col-sm-8 col-solution left-line">
         <h2 class="icon140 icon-album">智能云相册解决方案</h2>
-        <p class="content">七牛云智能云相册解决方案是基于七牛云日均百亿级数据处理需求的机器学习平台，集合了人脸聚类，360 类场景，200 类的物体识别，时间地点场景聚合，照片共享等功能，并自动根据用户相册整理行为反馈形成学习闭环，持续提升识别质量。除了可以与手机 ROM 深度合作定制，还能帮助社交产品精细化用户运营，找到社交产品活跃新增长点。
+        <p class="content">芯卓信息科技智能云相册解决方案是基于芯卓信息科技日均百亿级数据处理需求的机器学习平台，集合了人脸聚类，360 类场景，200 类的物体识别，时间地点场景聚合，照片共享等功能，并自动根据用户相册整理行为反馈形成学习闭环，持续提升识别质量。除了可以与手机 ROM 深度合作定制，还能帮助社交产品精细化用户运营，找到社交产品活跃新增长点。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -323,7 +323,7 @@
     <div class="row row-solution" id="intelligence">
       <div class="col-sm-8 col-solution right-line">
         <h2 class="icon140 icon-intelligence">智能硬件与物联网解决方案</h2>
-        <p class="content">随着智能手机和移动互联网的发展普及，越来越多的硬件通过软硬结合的方式，具备智能化、连接的能力。实现互联网服务的加载，需要云端提供强有力的支撑，后期更需要大数据的价值分析和挖掘。七牛云智能硬件与物联网解决方案为智能硬件厂商提供稳定可靠的技术服务，包括统一的云端存储，强大的计算能力，高效的数据分发，即插即用的应用能力，大数据分析，智能化的识别能力等。助力创新硬件厂商、传统设备厂商快速向智能硬件方向转型。
+        <p class="content">随着智能手机和移动互联网的发展普及，越来越多的硬件通过软硬结合的方式，具备智能化、连接的能力。实现互联网服务的加载，需要云端提供强有力的支撑，后期更需要大数据的价值分析和挖掘。芯卓信息科技智能硬件与物联网解决方案为智能硬件厂商提供稳定可靠的技术服务，包括统一的云端存储，强大的计算能力，高效的数据分发，即插即用的应用能力，大数据分析，智能化的识别能力等。助力创新硬件厂商、传统设备厂商快速向智能硬件方向转型。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -363,7 +363,7 @@
     <div class="row row-solution" id="media">
       <div class="col-sm-8 col-solution  left-line">
         <h2 class="icon140 icon-media">新媒体解决方案</h2>
-        <p class="content">移动互联网时代，传统广电业务和互联网业务结合越来越紧密，对广大广电带来巨大挑战，需快速完成新媒体战略部署，向媒体融合转型。七牛云新媒体解决方案致力于打造适配传媒业务的海量数据存储与加速的内容管理平台，统一管理面向集团级别的全媒体资源管理系统。包括多来源内容汇聚、融合媒体中心、直播、智能内容审核平台、云导播平台、全网大数据统计分析等。
+        <p class="content">移动互联网时代，传统广电业务和互联网业务结合越来越紧密，对广大广电带来巨大挑战，需快速完成新媒体战略部署，向媒体融合转型。芯卓信息科技新媒体解决方案致力于打造适配传媒业务的海量数据存储与加速的内容管理平台，统一管理面向集团级别的全媒体资源管理系统。包括多来源内容汇聚、融合媒体中心、直播、智能内容审核平台、云导播平台、全网大数据统计分析等。
         <a class="more" href="products/newmedia.html">查看详情</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -401,7 +401,7 @@
     <div class="row row-solution" id="security">
       <div class="col-sm-8 col-solution right-line">
         <h2 class="icon140 icon-security">安防解决方案</h2>
-        <p class="content">市场需求的变化使得安防场景与互联网更加紧密地结合，如家庭安防、校园监控、智慧运动场、平安城市等相继成为热门。七牛云安防解决方案在原有传统安防架构之上能够满足更多互联网远程监控需求，以达到不影响原本设施架构的前提下提高用户体验的目的。该解决方案提供了智能调度网络、云存储集群、多样的数据处理等技术服务，充分利用了云端弹性计算的优势，灵活部署，帮助客户有效降低成本。
+        <p class="content">市场需求的变化使得安防场景与互联网更加紧密地结合，如家庭安防、校园监控、智慧运动场、平安城市等相继成为热门。芯卓信息科技安防解决方案在原有传统安防架构之上能够满足更多互联网远程监控需求，以达到不影响原本设施架构的前提下提高用户体验的目的。该解决方案提供了智能调度网络、云存储集群、多样的数据处理等技术服务，充分利用了云端弹性计算的优势，灵活部署，帮助客户有效降低成本。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -445,7 +445,7 @@
     <div class="row row-solution" id="internet">
       <div class="col-sm-8 col-solution left-line">
         <h2 class="icon140 icon-internet">互联网与移动互联网解决方案</h2>
-        <p class="content">七牛云作为创业扶持产业中最重要的外部资源，互联网与移动互联网解决方案，为在线教育、旅游、O2O、电商、社交、娱乐等各大行业领域打造贴近业务场景的解决方案，并提供一站式数据管理服务，助力初创企业快速搭建与行业巨头公平竞争的技术基础设施。
+        <p class="content">芯卓信息科技作为创业扶持产业中最重要的外部资源，互联网与移动互联网解决方案，为在线教育、旅游、O2O、电商、社交、娱乐等各大行业领域打造贴近业务场景的解决方案，并提供一站式数据管理服务，助力初创企业快速搭建与行业巨头公平竞争的技术基础设施。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-kodo">对象存储</h5>
@@ -503,7 +503,7 @@
     <div class="row row-solution" id="qualityctrl">
       <div class="col-sm-8 col-solution right-line">
         <h2 class="icon140 icon-qualityctrl">应用质量监控解决方案</h2>
-        <p class="content">七牛云应用质量监控解决方案主要用于移动及视频应用性能管理，通过对关键业务系统进行监测及分析、告警与优化，不断改善业务可靠性与稳定性，为终端用户提供良好的体验，提升核心竞争力。
+        <p class="content">芯卓信息科技应用质量监控解决方案主要用于移动及视频应用性能管理，通过对关键业务系统进行监测及分析、告警与优化，不断改善业务可靠性与稳定性，为终端用户提供良好的体验，提升核心竞争力。
         <a class="more" data-toggle="modal" data-target="#feedback-modal" href="#">点击咨询</a></p>
         <div class="">
           <h5 class="icon50 icon-mass">移动 APP 质量分析</h5>
@@ -677,9 +677,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -693,7 +693,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -787,9 +787,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="index.html"><img alt="七牛云" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="index.html"><img alt="芯卓信息科技" src="assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -806,7 +806,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
