--- a/sinzuowebs/en/alaccelerator.html
+++ b/sinzuowebs/en/alaccelerator.html
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
           <p class="m-t-sm">让 AI 在业务中落地，助力产品智能升级</p>
           <div class="actions">
             <a class="btn btn-lg btn-hollow" href="https://jinshuju.net/f/PmruT3">提交需求</a>          </div>
-          <p class="text-left m-t">AI 创新扶持计划由七牛云人工智能实验室 Atlab 发起。面对人工智能在产品应用中面对的落地难、成本高、招人难和周期长等问题，提出 AI 创新扶持计划。由 Atlab 人工智能专家为您梳理需求，定制开发模型，最终提供 API/SDK。专注于计算机视觉领域，助力产品智能升级。</p>
+          <p class="text-left m-t">AI 创新扶持计划由芯卓信息科技人工智能实验室 Atlab 发起。面对人工智能在产品应用中面对的落地难、成本高、招人难和周期长等问题，提出 AI 创新扶持计划。由 Atlab 人工智能专家为您梳理需求，定制开发模型，最终提供 API/SDK。专注于计算机视觉领域，助力产品智能升级。</p>
         </div>
         <table width="100%" border="0" cellpadding="0" cellspacing="0" class="table border-none">
           <tbody>
@@ -558,9 +558,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -574,7 +574,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -668,9 +668,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -687,7 +687,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
