--- a/sinzuowebs/en/events.html
+++ b/sinzuowebs/en/events.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="架构师实践日，Tech Online，ECUG，牛人秀" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>七牛云活动</title>
+    <title>芯卓信息科技活动</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -59,7 +59,7 @@
                   <li class="solution">                    <a href="solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -136,7 +136,7 @@
   <div class="container">
     <div class="tabs">
       <ul class="nav nav-tabs nav-justified navbar-wrapper-middle">
-        <li class="intLink active"><a href="#tab-content-section-1">七牛架构师实践日</a></li>
+        <li class="intLink active"><a href="#tab-content-section-1">芯卓信息科技架构师实践日</a></li>
         <li class="intLink"><a href="#tab-content-section-2">ECUG Con</a></li>
         <li class="intLink"><a href="#tab-content-section-plane">扶持计划</a></li>
         <li class="intLink"><a href="#tab-content-section-3">技术课程</a></li>
@@ -151,7 +151,7 @@
     <div class="row">
       <div class="col-sm-6 ipo-col-title">
         <dl>
-          <dt>七牛架构师实践日</dt>
+          <dt>芯卓信息科技架构师实践日</dt>
           <dd><a class="more" target="_blank" href="http://hd.qiniu.com/arch">更多内容 &gt;</a></dd>
         </dl>
       </div>
@@ -211,7 +211,7 @@
 
       <div class="col-sm-6">
         <span>
-          ECUG全称为 Effective Cloud User Group（实效云计算用户组），由七牛云CEO许式伟发起，集结了一批具有高端视角并仍醉心于技术本身的同仁，共同关注云计算前沿技术的最新成果和分布式开发、运维的最佳实践。从 2007 年至今，ECUG社区每年都会组织一场全国性的 ECUG Con 大会，期间众多领域内权威技术大神纷纷参与，他们或许在大众技术会议已经鲜少露面，但会在 ECUG Con 畅谈心得，共同奉献一场半公开的高规格技术分享盛会。
+          ECUG全称为 Effective Cloud User Group（实效云计算用户组），由芯卓信息科技CEO许式伟发起，集结了一批具有高端视角并仍醉心于技术本身的同仁，共同关注云计算前沿技术的最新成果和分布式开发、运维的最佳实践。从 2007 年至今，ECUG社区每年都会组织一场全国性的 ECUG Con 大会，期间众多领域内权威技术大神纷纷参与，他们或许在大众技术会议已经鲜少露面，但会在 ECUG Con 畅谈心得，共同奉献一场半公开的高规格技术分享盛会。
         </span>
       </div>
     </div>
@@ -239,7 +239,7 @@
               <div class="case" id="customer-ch">
                 <img alt="长虹" src="../../oscoknsb4.bkt.clouddn.com/%e4%b8%83%e7%89%9b%e5%a4%a7%e6%95%b0%e6%8d%ae%e5%b9%b3%e5%8f%b0%e5%bb%ba%e8%ae%be%e5%ae%9e%e8%b7%b5b495.jpg?imageView2/1/w/640/h/360/format/jpg/q/75|imageslim" />                <a class="btn-icon" href="javascript:;" target="_blank"></a>
               </div>
-              <h5>七牛的大数据平台建设实践</h5>
+              <h5>芯卓信息科技的大数据平台建设实践</h5>
             </div>
           </div>
       </div>
@@ -259,7 +259,7 @@
       </div>
       <div class="col-sm-6">
         <span>
-          扶持计划是七牛云专门为特定行业或领域创业团队打造，集合产业链合作伙伴优势势资源，为创业团队提供覆盖咨询、技术、资本、人力资源、团队协作等扶持礼包和社群资源。
+          扶持计划是芯卓信息科技专门为特定行业或领域创业团队打造，集合产业链合作伙伴优势势资源，为创业团队提供覆盖咨询、技术、资本、人力资源、团队协作等扶持礼包和社群资源。
         </span>
       </div>
     </div>
@@ -268,8 +268,8 @@
         <div class="col-sm-4">
           <div class="grid-container">
             <div class="case" id="customer-ch">
-              <a href="goglobal.html"><img alt="七牛云出海创业扶持计划" src="../assets/activityGoglobal-90ca713d855d486ecf860c34b841f6283d0f1a4ad5cc193e657b7c674e397a9d.jpg" /></a>            </div>
-            <h5>七牛云出海创业扶持计划</h5>
+              <a href="goglobal.html"><img alt="芯卓信息科技出海创业扶持计划" src="../assets/activityGoglobal-90ca713d855d486ecf860c34b841f6283d0f1a4ad5cc193e657b7c674e397a9d.jpg" /></a>            </div>
+            <h5>芯卓信息科技出海创业扶持计划</h5>
           </div>
         </div>
       </div>
@@ -290,7 +290,7 @@
 
       <div class="col-sm-6">
         <span>
-          对于企业级用户来说，其在技术层面最迫切的需求是什么？是技术方案能够作为工具，快速应用于产品开发、业务拓展和用户体验，而非单纯对其进行探索和提高。七牛将甄选不同领域的技术主题，从自身产品优势和技术积累出发，结合技术领域内普适的需求和热点，打造“理论＋实践＋开发＋场景”四项全能的课程体系，切实帮助客户实现技术实力的成长，缩短从想法到产品的距离。
+          对于企业级用户来说，其在技术层面最迫切的需求是什么？是技术方案能够作为工具，快速应用于产品开发、业务拓展和用户体验，而非单纯对其进行探索和提高。芯卓信息科技将甄选不同领域的技术主题，从自身产品优势和技术积累出发，结合技术领域内普适的需求和热点，打造“理论＋实践＋开发＋场景”四项全能的课程体系，切实帮助客户实现技术实力的成长，缩短从想法到产品的距离。
         </span>
       </div>
     </div>
@@ -334,7 +334,7 @@
 
       <div class="col-sm-6">
         <span>
-          牛人秀是七牛人对外演讲的精粹视频的汇集地。
+          牛人秀是芯卓信息科技人对外演讲的精粹视频的汇集地。
         </span>
       </div>
     </div>
@@ -530,9 +530,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -546,7 +546,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -640,9 +640,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -659,7 +659,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="user-agreement.html">用户协议</a></li>
             <li><a href="sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
