--- a/sinzuowebs/en/events/niushow.html
+++ b/sinzuowebs/en/events/niushow.html
@@ -9,11 +9,11 @@
 <meta name="csrf-token" content="FBvokv/v4QVDCTUFy5WznkwfB5SiaC8v3IUkkQyTdSTHi313nhApEifsw9hr5f2GaumpLxqPfkYwp7uuiNLJMw==" />
     <meta charset="utf-8">
     <meta name="keywords" content="牛人秀" />
-    <meta name="description" content="牛人秀是七牛人对外演讲的精粹视频的汇集地。">
+    <meta name="description" content="牛人秀是芯卓信息科技人对外演讲的精粹视频的汇集地。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>牛人秀 - 七牛云</title>
+    <title>牛人秀 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="../products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -161,7 +161,7 @@
                 <div class="lecturer-info-box">
                   <div class="lecturer-tail">
                     <h4 class="lecturer-name">袁晓沛</h4>
-                    <h5 class="lecturer-job">七牛云技术总监</h5>
+                    <h5 class="lecturer-job">芯卓信息科技技术总监</h5>
                   </div>
                   <div class="short-line"></div>
                   <div class="btn-dwn-wrap">
@@ -192,7 +192,7 @@
                 <div class="lecturer-info-box">
                   <div class="lecturer-tail">
                     <h4 class="lecturer-name">彭垚</h4>
-                    <h5 class="lecturer-job">七牛 AI 实验室负责人</h5>
+                    <h5 class="lecturer-job">芯卓信息科技 AI 实验室负责人</h5>
                   </div>
                   <div class="short-line"></div>
                   <div class="btn-dwn-wrap">
@@ -223,7 +223,7 @@
                 <div class="lecturer-info-box">
                   <div class="lecturer-tail">
                     <h4 class="lecturer-name">白顺龙</h4>
-                    <h5 class="lecturer-job">七牛云技术总监</h5>
+                    <h5 class="lecturer-job">芯卓信息科技技术总监</h5>
                   </div>
                   <div class="short-line"></div>
                   <div class="btn-dwn-wrap">
@@ -254,7 +254,7 @@
                 <div class="lecturer-info-box">
                   <div class="lecturer-tail">
                     <h4 class="lecturer-name">徐立</h4>
-                    <h5 class="lecturer-job">七牛产品副总裁</h5>
+                    <h5 class="lecturer-job">芯卓信息科技产品副总裁</h5>
                   </div>
                   <div class="short-line"></div>
                   <div class="btn-dwn-wrap">
@@ -285,7 +285,7 @@
                 <div class="lecturer-info-box">
                   <div class="lecturer-tail">
                     <h4 class="lecturer-name">许式伟</h4>
-                    <h5 class="lecturer-job">七牛云 CEO</h5>
+                    <h5 class="lecturer-job">芯卓信息科技 CEO</h5>
                   </div>
                   <div class="short-line"></div>
                   <div class="btn-dwn-wrap">
@@ -458,9 +458,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -474,7 +474,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -568,9 +568,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -587,7 +587,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
