--- a/sinzuowebs/en/products/fusion.html
+++ b/sinzuowebs/en/products/fusion.html
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -344,7 +344,7 @@
             <ul class="links-list">
               <li><a target="_blank" title="快速入门" href="https://developer.qiniu.com/fusion/manual/1228/fusion-quick-start">快速入门</a></li>
               <li><a target="_blank" title="DV 证书验证指南" href="https://developer.qiniu.com/ssl/manual/3667/ssl-certificate-of-free-dns-validation-guide">DV 证书验证指南</a></li>
-              <li><a target="_blank" title="七牛全球下载加速的海外一览表" href="https://developer.qiniu.com/fusion/manual/1360/seven-cattle-download-speed-of-the-world-s-overseas-schedule">七牛全球下载加速的海外一览表</a></li>
+              <li><a target="_blank" title="芯卓信息科技全球下载加速的海外一览表" href="https://developer.qiniu.com/fusion/manual/1360/seven-cattle-download-speed-of-the-world-s-overseas-schedule">芯卓信息科技全球下载加速的海外一览表</a></li>
               <li><a target="_blank" title="绑定加速域名和域名解析流程" href="https://developer.qiniu.com/fusion/manual/1367/custom-domain-name-binding-process">绑定加速域名和域名解析流程</a></li>
             </ul>
           </div>
@@ -374,7 +374,7 @@
           <div class="col-sm-3 col-xs-6">
             <h4>产品动态</h4>
             <ul class="links-list">
-              <li><a target="_blank" title="斩获 GFIC 2016 “产品创新奖”，七牛云融合 CDN 突围而出" href="http://blog.qiniu.com/archives/7541">斩获 GFIC 2016 “产品创新奖”，七牛云融合 CDN 突围而出</a></li>
+              <li><a target="_blank" title="斩获 GFIC 2016 “产品创新奖”，芯卓信息科技融合 CDN 突围而出" href="http://blog.qiniu.com/archives/7541">斩获 GFIC 2016 “产品创新奖”，芯卓信息科技融合 CDN 突围而出</a></li>
             </ul>
           </div>
         </div>
@@ -530,9 +530,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -546,7 +546,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -640,9 +640,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -659,7 +659,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
