--- a/sinzuowebs/en/products/pili.html
+++ b/sinzuowebs/en/products/pili.html
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-xs-8">
           <h2>直播云</h2>
-          <p>七牛直播云服务 (PILI) 是基于强大的全球化实时流网络、完善的客户端服务和云端服务，打造的端到端直播解决方案，提供低延迟、稳定流畅、高可用的一站式直播云服务。</p>
+          <p>芯卓信息科技直播云服务 (PILI) 是基于强大的全球化实时流网络、完善的客户端服务和云端服务，打造的端到端直播解决方案，提供低延迟、稳定流畅、高可用的一站式直播云服务。</p>
           <div class="actions d-none">
             <a target="_blank" class="btn btn-lg btn-default m-r m-b-xs" href="https://jinshuju.net/f/NhLqLx">立即使用</a>          </div>
         </div>
@@ -298,7 +298,7 @@
           <img class="media-object" alt="弱网少卡顿" width="100" src="../../assets/pili/icon-ruowangshaokadun-722d8a452a128008cc7c3ce4e3877be3c4926966a6e41c8f9222c07e52850d99.png" />
           <div class="caption">
             <h4>弱网少卡顿</h4>
-            <p>采用七牛优化后的 QUIC 传输协议，帮助用户减少复杂网络下的卡顿率，提高流畅度。</p>
+            <p>采用芯卓信息科技优化后的 QUIC 传输协议，帮助用户减少复杂网络下的卡顿率，提高流畅度。</p>
           </div>
         </div>
       </div>
@@ -419,7 +419,7 @@
             <ul class="links-list">
               <li><a href="https://developer.qiniu.com/pili/manual/3694/pili-product-introduction">产品简介</a></li>
               <li><a href="https://developer.qiniu.com/pili/manual/1217/live-architecture-fleetly">直播架构快速搭建</a></li>
-              <li><a href="https://developer.qiniu.com/pili/manual/1209/live-the-core-function">七牛直播云技术白皮书</a></li>
+              <li><a href="https://developer.qiniu.com/pili/manual/1209/live-the-core-function">芯卓信息科技直播云技术白皮书</a></li>
               <li><a href="https://developer.qiniu.com/pili/manual/4211/small-program-live-access-to-documents">小程序直播接入文档</a></li>
             </ul>
           </div>
@@ -593,9 +593,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -609,7 +609,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -703,9 +703,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -722,7 +722,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
