--- a/sinzuowebs/en/products/plsv.html
+++ b/sinzuowebs/en/products/plsv.html
@@ -9,11 +9,11 @@
 <meta name="csrf-token" content="aWJCNnKtrn6Wz2gkJ3T2GiN/esrkMtTJxcP+iC0C8nm68tfTE1JmafIqnvmHBLgCBYnUcVzVhaAp4WG3qUNObg==" />
     <meta charset="utf-8">
     <meta name="keywords" content="短视频解决方案、短视频服务、短视频SDK" />
-    <meta name="description" content="七牛短视频服务(plsv)是为企业用户提供极速稳定的视频上传、存储、转码、播放和下载等功能的一站式短视频解决方案。">
+    <meta name="description" content="芯卓信息科技短视频服务(plsv)是为企业用户提供极速稳定的视频上传、存储、转码、播放和下载等功能的一站式短视频解决方案。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>短视频解决方案_短视频服务-七牛云</title>
+    <title>短视频解决方案_短视频服务-芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">Application Quality Monitoring</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">Storage in Private Cloud</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">Unstructured Data Management</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">Safety Protection Terminals</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">Smart Device and IOT</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">Intelligent Cloud Album</h4>                      <p class="hidden-xs"></p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">Internet and Mobile internet</h4>                      <p class="hidden-xs"></p></a></li>
                 <li class="solution d-none">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-sm-6 col-xs-12">
           <h2>短视频解决方案</h2>
-          <p>七牛短视频解决方案（PLSV）是提供端到云的一站式的短视频解决方案，集视频拍摄、编辑、处理、上传、存储、分发加速、播放、内容分析审核、大数据分析等功能于一体。</p>
+          <p>芯卓信息科技短视频解决方案（PLSV）是提供端到云的一站式的短视频解决方案，集视频拍摄、编辑、处理、上传、存储、分发加速、播放、内容分析审核、大数据分析等功能于一体。</p>
           <div class="actions">
             <a class="btn btn-lg btn-hollow m-r m-b-xs" target="_blank" href="https://jinshuju.net/f/IeOD89">立即咨询</a>            <a class="btn btn-lg btn-hollow m-r m-b-xs" target="_blank" href="https://developer.qiniu.com/pili/sdk/3920/short-video-demo-download">短视频 SDK</a>            <a target="_blank" class="btn btn-lg btn-hollow m-b-xs" href="player.html">播放器 SDK</a>          </div>
         </div>
@@ -813,7 +813,7 @@
   <div class="container">
     <div class="intro">
       <h2 class="title">客户案例</h2>
-      <p class="desc">群雄逐鹿短视频，他们都在用七牛</p>
+      <p class="desc">群雄逐鹿短视频，他们都在用芯卓信息科技</p>
     </div>
     <div id="cases-slider" class="conveyor slick-slider draggable">
       <dd><div class="index-case" title="租我么"><img alt="zuwome" class="case" src="../../assets/plsv/client-zuwome-258d283fc3a10755806a3d9d05431cc2351696b9ff5ff8f1a99897d88c192acd.jpg" /></div></dd>
@@ -884,7 +884,7 @@
           <div class="col-sm-4 col-xs-4">
             <h4>常用文档</h4>
             <ul class="links-list">
-              <li><a target="_blank" title="七牛短视频白皮书" href="https://developer.qiniu.com/pili/sdk/3919/a-short-video-the-white-paper">七牛短视频白皮书</a></li>
+              <li><a target="_blank" title="芯卓信息科技短视频白皮书" href="https://developer.qiniu.com/pili/sdk/3919/a-short-video-the-white-paper">芯卓信息科技短视频白皮书</a></li>
               <li><a target="_blank" title="服务端API" href="https://developer.qiniu.com/pili//sdk/3921/the-server-api">服务端API</a></li>
             </ul>
           </div>
@@ -1056,9 +1056,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -1072,7 +1072,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -1166,9 +1166,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../../index.html"><img alt="七牛云" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../../index.html"><img alt="芯卓信息科技" src="../../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -1185,7 +1185,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="d-none">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
