--- a/sinzuowebs/products/vance.html
+++ b/sinzuowebs/products/vance.html
@@ -8,12 +8,12 @@
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="5Ftu4gphP7IVccYO+ScIUvY4Kx5H6Q1cEG5YTVLMW6g3y/sHa573pXGUMNNZV0ZK0M6Fpf8OXDX8TMdy1o3nvw==" />
     <meta charset="utf-8">
-    <meta name="keywords" content="点播云，视频点播，七牛点播云，云点播，视频上传，视频存储，视频转码" />
-    <meta name="description" content="七牛点播云汇聚七牛云存储、音视频转码和融合CDN 等强大、稳定的基础服务，专注于视频领域为客户提供视频上传、存储、转码、播放器、分发加速和统计分析等服务的、专业可靠的一站式视频点播PaaS平台。">
+    <meta name="keywords" content="点播云，视频点播，芯卓信息科技点播云，云点播，视频上传，视频存储，视频转码" />
+    <meta name="description" content="芯卓信息科技点播云汇聚芯卓信息科技存储、音视频转码和融合CDN 等强大、稳定的基础服务，专注于视频领域为客户提供视频上传、存储、转码、播放器、分发加速和统计分析等服务的、专业可靠的一站式视频点播PaaS平台。">
     <meta name="baidu-site-verification" content="otBvF33R0a" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>点播云_点播云服务 - 七牛云</title>
+    <title>点播云_点播云服务 - 芯卓信息科技</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -61,7 +61,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-sm-6 col-xs-10">
           <h2>点播云</h2>
-          <p>点播云 (VANCE) 是汇聚七牛云存储、音视频转码和融合 CDN 等强大、稳定的基础服务，专注于视频领域为客户提供视频上传、存储、转码、播放器、分发加速和统计分析等服务的、专业可靠的一站式视频点播 PaaS 平台。</p>
+          <p>点播云 (VANCE) 是汇聚芯卓信息科技存储、音视频转码和融合 CDN 等强大、稳定的基础服务，专注于视频领域为客户提供视频上传、存储、转码、播放器、分发加速和统计分析等服务的、专业可靠的一站式视频点播 PaaS 平台。</p>
           <div class="actions">
             <a class="btn btn-lg btn-default m-r m-b-xs" target="_blank" data-toggle="modal" data-target="#feedback-modal" href="#">申请试用</a>            <a class="btn btn-lg btn-hollow m-b-xs" href="plsv.html">短视频解决方案</a>          </div>
         </div>
@@ -278,7 +278,7 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading">安全可靠</h4>
-            <p>依托七牛可靠的云存储服务，保障数据安全，同时提供鉴权、防盗链等多种安全防护。</p>
+            <p>依托芯卓信息科技可靠的云存储服务，保障数据安全，同时提供鉴权、防盗链等多种安全防护。</p>
           </div>
         </div>
       </div>
@@ -482,9 +482,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -498,7 +498,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -592,9 +592,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -611,7 +611,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
