--- a/sinzuowebs/resources/plup.html
+++ b/sinzuowebs/resources/plup.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>七牛云“涉稳安全资源包”火速到场</title>
+    <title>芯卓信息科技“涉稳安全资源包”火速到场</title>
 
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -58,7 +58,7 @@
                   <li class="solution">                    <a href="../solutions.html#qualityctrl">                      <h4 class="qualityctrl menu-title">应用质量监控解决方案</h4>                      <p class="hidden-xs">满足移动及视频应用性能管理需求，可定制化的质量监控平台</p></a></li>                  <li class="solution">                    <a href="../solutions.html#privatization">                      <h4 class="privatization menu-title">私有云存储解决方案</h4>                      <p class="hidden-xs">可定制化的数百 PB 级别、高可靠、强安全的存储系统</p></a></li>                  <li class="solution">                    <a href="../solutions.html#data">                      <h4 class="data menu-title">非结构化数据管理解决方案</h4>                      <p class="hidden-xs">提供大批量文件打包上传、文档检索、多媒体数据处理等服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#security">                      <h4 class="security menu-title">安防解决方案</h4>                      <p class="hidden-xs">灵活部署，满足不同安防场景互联网远程监控需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#intelligence">                      <h4 class="intelligence menu-title">智能硬件与物联网解决方案</h4>                      <p class="hidden-xs">满足智能硬件厂商各应用场景下云端计算需求</p></a></li>                  <li class="solution">                    <a href="../solutions.html#album">                      <h4 class="album menu-title">智能云相册解决方案</h4>                      <p class="hidden-xs">满足各场景照片智能分类需求，提供与手机ROM深度定制服务</p></a></li>                  <li class="solution">                    <a href="../solutions.html#internet">                      <h4 class="internet menu-title">互联网与移动互联网解决方案</h4>                      <p class="hidden-xs">为互联网初创企业量身定制，一站式云计算服务平台</p></a></li>
                 <li class="solution ">
                   <a href="../products/pili/livequiz.html">                    <h4 class="quiz menu-title">直播竞答解决方案</h4>
-                    <p class="hidden-xs">七牛云直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
+                    <p class="hidden-xs">芯卓信息科技直播竞答解决方案是专为直播竞答产品打造的全球化直播流服务和端到端场景解决方案</p>
 </a>                </li>
               </ul>
             </li>
@@ -131,7 +131,7 @@
     <div class="middle-container">
       <div class="row">
         <div class="col-sm-8 col-xs-12">
-          <h2>七牛云“涉稳安全资源包”火速到场</h2>
+          <h2>芯卓信息科技“涉稳安全资源包”火速到场</h2>
           <h3>集鉴黄、鉴暴恐、政治人物识别为一体的综合涉稳安全系列产品</h3>
           <div class="actions">
             <a class="btn btn-lg btn-hollow" data-toggle="modal" data-target="#feedback-modal" href="#">立即试用</a>          </div>
@@ -157,7 +157,7 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading">产品可靠</h4>
-            <p>七牛云人工智能实验室在人工智能领域深耕多年，在内容审核领域深入研发，对政府类的审核需求有高度的敏感和理解，现累积识别图片数量已超过 4000 亿张、审核视频数量超过 80 亿个。</p>
+            <p>芯卓信息科技人工智能实验室在人工智能领域深耕多年，在内容审核领域深入研发，对政府类的审核需求有高度的敏感和理解，现累积识别图片数量已超过 4000 亿张、审核视频数量超过 80 亿个。</p>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading">紧跟政策</h4>
-            <p>七牛云人工智能实验室的鉴黄、鉴暴恐、政治人物识别是严格按照网信、网安等监管机构要求，用心打造的高性能、高识别率，紧跟时政要求的涉稳安全检测系列API。</p>
+            <p>芯卓信息科技人工智能实验室的鉴黄、鉴暴恐、政治人物识别是严格按照网信、网安等监管机构要求，用心打造的高性能、高识别率，紧跟时政要求的涉稳安全检测系列API。</p>
           </div>
         </div>
       </div>
@@ -201,8 +201,8 @@
 
     </div>
 
-    <p>此次七牛推出“涉稳安全资源包”，即鉴黄、鉴暴恐、政治人物识别为一体的综合涉稳安全系列产品，致力为广大网民创造一片清新宁静的环境。</p>
-    <p>七牛为初次接入客户提供涉稳安全资源包1元体验套餐包含：调用鉴黄，鉴暴恐，政治人物识别确定部分各 5 万次 API 调用（另赠送 1 万次不确定部分）</p>
+    <p>此次芯卓信息科技推出“涉稳安全资源包”，即鉴黄、鉴暴恐、政治人物识别为一体的综合涉稳安全系列产品，致力为广大网民创造一片清新宁静的环境。</p>
+    <p>芯卓信息科技为初次接入客户提供涉稳安全资源包1元体验套餐包含：调用鉴黄，鉴暴恐，政治人物识别确定部分各 5 万次 API 调用（另赠送 1 万次不确定部分）</p>
 
     <p>
       产品包括三个子产品：
@@ -427,9 +427,9 @@
             </div>
           </div>
           <div class="col-sm-4 text-center">
-            <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
+            <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>            <div class="qrcode">
               <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />            </div>
-            <div>关注七牛云公众号</div>
+            <div>关注芯卓信息科技公众号</div>
             <div class="sns">
               <a class="github" href="https://github.com/qiniu" target="_blank"></a>
               <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -443,7 +443,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
@@ -537,9 +537,9 @@
               <div id="collapseCare" class="panel-collapse collapse collapse-menu">
                 <div class="panel-body panel-menu">
                   <div class="text-center">
-                    <a class="logo" href="../index.html"><img alt="七牛云" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
+                    <a class="logo" href="../index.html"><img alt="芯卓信息科技" src="../assets/logo-b5caafe0363dace7b5c0a00be38a4829444918c4322a6168714522ee19dcb1c1.png" /></a>                    <div class="qrcode">
                       <img src="../assets/weixin-qrcode-e4ddfa8a1a16b96c60e4b671b676dfd168ab4f91b5a700a755dde294347fc0f0.png" alt="Weixin qrcode" />                    </div>
-                    <div>关注七牛云公众号</div>
+                    <div>关注芯卓信息科技公众号</div>
                     <div class="sns">
                       <a class="github" href="https://github.com/qiniu" target="_blank"></a>
                       <a class="weibo" href="http://weibo.com/qiniutek" target="_blank"></a>
@@ -556,7 +556,7 @@
             <a target="_blank" rel="noopener" href="#" class="iso-logo" title="iso"></a>
           </div>
           <ul class="">
-            <li><div class="copyright grey-color">© 2018 七牛云</div></li>
+            <li><div class="copyright grey-color">© 2018 芯卓信息科技</div></li>
             <li><a href="../user-agreement.html">用户协议</a></li>
             <li><a href="../sla-kodo.html">SLA</a></li>
             <li><a target="_blank" href="https://status.qiniu.com/">服务状态</a></li>
